--- a/라인/자바/2. Optional에 대해서 아는바를 설명해보세요.md
+++ b/라인/자바/2. Optional에 대해서 아는바를 설명해보세요.md
@@ -92,7 +92,49 @@ public String getCarInsuranceName(Person person){
    다음 예제는 다른 방법으로 이 문제를 해결하는 코드다.
 
 
+public String getCarInsuranceName(Person person){
+    if(person == null){
+      return "Unknown"
+    }
+    Car car = person.getCar();
+    if(car == null){
+      return "Unknown"
+    }
 
+    Insurance insurance = car.getInsurance();   
+    if(insurance == null){
+      return "Unknown"
+    }
+    return insurance.getName();
+}
+
+- 위 코드는 조금 다른 방법으로 중첩 if블록을 없앴다. 즉, null 변수가 있으면 즉시 'Unknown"을 반환한다
+  하지만, 이 예제도 그렇게 좋은 코드는 아니다. 메서드에 네 개의 출구가 생겼기 때문이다.
+  출구 때문에 유지보수가 어려워진다. 게다가 null일 때 반환되는 기본 값 'Unknown'이 세 곳에서 반복되고 있는데
+  같은 문자열을 상수로 만들어서 이 문제를 해결할 수는 있다.
+
+- 앞의 코드는 쉽게 에러를 일으킬 수 있다. 만약 누군가가 null일 수 있다는 사실을 깜빡 잊었다면 어떤 일이 일어날까?
+  이 장의 앞에서 null로 값이 없다는 사실을 표현하는 것은 좋은 방법이 아니라고 설명했다.
+-> 따라서 값이 있거나 없음을 표현할 수 있는 좋은 방법이 필요하다.
+
+
+3) null 때문에 발생하는 문제
+- 자바에서 null 참조를 사용하면서 발생할 수 있는 이론적, 실용적 문제를 확인하자.
+
+(1) 에러의 근원이다
+- NullPointerException은 자바에서 가장 흔히 발생하는 에러다
+(2) 코드를 어지럽힌다
+- 때로는 중첩된 null 확인 코드를 추가해야 하므로 null 때문에 코드 가독성이 떨어진다
+(3) 아무 의미가 없다
+- null은 아무 의미도 표현하지 안흔ㄴ다. 특히 정적 형식 언어에서 값이 없음을 표현하는 방법으로는 적절하지 않다
+(4) 자바 철학에 위배된다
+- 자바는 개발자로부터 모든 포인터를 숨겼다. 하지만 예외가 있는데 그것이 바로 null 포인터다.
+(5) 형식 시스템에 구멍을 만든다.
+- null은 무형식이며, 정보를 포함하고 있지 않으므로 모든 참조 형식에 null을 할당할 수 있다.
+  이런 식으로 null이 할당되기 시작하면서 시스템의 다른 부분으로 null이 퍼졌을 때, 애초에 null이 어떤
+  의미로 사용되었는지 알 수 없다.
+
+- 다른 프로그래밍 언어에서는 null 참조를 어떻게 해결하는지 살펴보면서 null 참조 문제 해결 방법의 실마리를 찾아보자.  
 
 
 
