--- a/자란다/네트워크/라우터/라우터의 기본.md
+++ b/자란다/네트워크/라우터/라우터의 기본.md
@@ -18,6 +18,10 @@
 프로토콜 스택의 IP 담당 부분과 LAN 어댑터의 역할 분담과 같습니다.
 그러므로 라우터의 중계 부분은 IP 담당 부분과 같고, 포트 부분은 LAN 어댑터와 같다고 생각하면 됩니다.
 
+컴퓨터는 LAN 어댑터를 교환해서 이더넷뿐만 아니라 무선 LAN도 지원할 수 있습니다. 반면 컴퓨터용 LAN 어댑터라면 이더넷과 무선 LAN 이외의 통신 기술을 지원하는 것을 거의 볼 수 없지만, 라우터의 포트 부분은 LAN 이외의 통신 기술을 지원하는 것도 있습니다. ADSL이나 FTTH 등 이른바 광대역 회선이라고 부르는 것과 전용선 등의 통신 회선 등이 이러한 예입니다. 포트 부분에 이러한 통신 기술의 하드웨어를 장착하면 다양한 통신 기술을 지원할 수 있습니다.
+
+라우터의 내부 구조를 알면 어떻게 동작하는지 대략 알수 있습니다. 먼저 포트 부분에서 패킷을 수신하는데, 이 동작은 포트 부분의 통신 기술의 규칙을 따릅니다. 포트 부분이 이더넷이라면 이더넷의 규칙에 따라 동작하고, 무선 LAN이라면 무선LAN의 규칙대로 동작하며, 통신 회선이면 통신 회선의 규칙에 따라 동작합니다. 
+
  
 
 
