--- a/자란다/네트워크/라우터/라우터의 기본.md
+++ b/자란다/네트워크/라우터/라우터의 기본.md
@@ -22,7 +22,7 @@
 
 라우터의 내부 구조를 알면 어떻게 동작하는지 대략 알수 있습니다. 먼저 포트 부분에서 패킷을 수신하는데, 이 동작은 포트 부분의 통신 기술의 규칙을 따릅니다. 포트 부분이 이더넷이라면 이더넷의 규칙에 따라 동작하고, 무선 LAN이라면 무선LAN의 규칙대로 동작하며, 통신 회선이면 통신 회선의 규칙에 따라 동작합니다. 
 
- 
+포트 부분윽 
 
 
 
