--- a/라인/JPA/2. JPA N+1 문제는 어떤 상황에서 발생할까요?.md
+++ b/라인/JPA/2. JPA N+1 문제는 어떤 상황에서 발생할까요?.md
@@ -76,7 +76,57 @@ SELECT * FROM ORDERS WHERE MEMBER_Id=?
 -> 즉시 로딩은 JPQL을 실행할 때, N+1문제가 발생할 수 있습니다. 
 
 
+2) 지연 로딩과 N+1
+
+회원과 주문을 지연 로딩으로 설정하면 어떻게 될까? 
+방금 살펴본 즉시 로딩 시나리오를 지연 로딩으로 변경해도, N+1 문제에서 자유로울 수 없다
+예제 15.25와 같이 회원이 참조하는 주문 정보를 FetchType.LAZY로 지정해서, 지연 로딩으로 설정해보자.
+
+@Entity
+public class Member{
+   @Id @GeneratedValue
+   private Long id;
+
+   @OneToMany(mappedBy="member", fetch=FetchType.LAZY)
+   private List<Order> orders = new ArrayList<Order>();
+
+   ...
+}
 
 
+지연 로딩으로 설정하면 JPQL에서는 N+1문제가 발생하지 않는다.
 
+List<Member> members =
+  em.createQuery("select m from Member m", Member.class)
+  .getResultList();
+
+지연 로딩이므로 데이터베이스에서 회원만 조회된다. 따라서 다음 SQL만 실행되고
+연관된 주문 컬렉션은 지연 로딩된다.
+
+SELECT * FROM MEMBER
+
+이후 비즈니스 로직에서 주문 컬렉션을 실제 사용할 때, 지연 로딩이 발생한다.
+
+firstMember = members.get(0);
+firstMember.getOrders().size(); // 지연 로딩 초기화
+
+members.get(0)로 회원 하나만 조회해서 사용했기 때문에 firstMember.getOrders().size()를 호출하면서 실행되는 SQL은 다음과 같다.
+SELECT * FROM ORDERS WHERE MEMBER_ID=?
+
+문제는 다음처럼 모든 회원에 대해 연관된 주문 컬렉션을 사용할 때 발생한다.
+for(Member member: members){
+   System.out.println("memebr = " + member.getOrders().size());
+}
+
+주문 컬렉션을 초기화하는 수만큼 다음 SQL이 실행될 수 있다.
+회원이 5명이면 회원에 따른 주문도 5번 조회된다.
+
+SELECT * FROM ORDERS WHERE MEMBER_ID=1 // 회원과 연관된 주문
+SELECT * FROM ORDERS WHERE MEMBER_ID=2 // 회원과 연관된 주문
+SELECT * FROM ORDERS WHERE MEMBER_ID=3 // 회원과 연관된 주문
+SELECT * FROM ORDERS WHERE MEMBER_ID=4 // 회원과 연관된 주문
+SELECT * FROM ORDERS WHERE MEMBER_ID=5 // 회원과 연관된 주문
+
+이것도 결국 N+1문제다. 지금까지 살펴본 것처럼 N+1문제는 즉시 로딩과 지연 로딩일 때 모두 발생할 수 있다.
+지금부터 N+1문제를 피할 수 있는 다양한 방법을 알아보자. 
 ```
