--- a/자란다/네트워크/라우터/라우터의 기본.md
+++ b/자란다/네트워크/라우터/라우터의 기본.md
@@ -22,13 +22,11 @@
 
 라우터의 내부 구조를 알면 어떻게 동작하는지 대략 알수 있습니다. 먼저 포트 부분에서 패킷을 수신하는데, 이 동작은 포트 부분의 통신 기술의 규칙을 따릅니다. 포트 부분이 이더넷이라면 이더넷의 규칙에 따라 동작하고, 무선 LAN이라면 무선LAN의 규칙대로 동작하며, 통신 회선이면 통신 회선의 규칙에 따라 동작합니다. 
 
-포트 부분윽 
+포트 부분의 하드웨어에 의뢰하여 패킷을 수신한다고 생각하면 되는데, 중계 부분에서 받은 패킷의 IP패킷에 기록되어 있는 수신처 IP 주소와 중계 대상을 등록한 표를 대조하여 중계 대상을 판단합니다. 그리고 중계 대상측의 포트로 패킷을 옮기고 포트 부분에 의뢰하여 패킷을 송신한다고 생각하세요.
 
+이것이 라우터의 기본인데, 좀 더 살펴보겠습니다. 앞에서 포트 부분의 통신 기술의 규칙에 따라 패킷을 송수신한다고 설명했는데, 이것은 포트 부분이 패킷의 송신처 또는 수신처가 되어 패킷을 송수신한다는 것입니다.
 
+예를 들어, 포트가 이더넷인 경우 라우터의 포트에는 MAC주소가 할당되어 이더넷의 송신처나 수신처가 됩니다. 포트에는 IP주소도 할당되므로 이런 의미에서도 컴푸터의 LAN 어댑터와 같습니다.
 
-
-
-
-
-
+그리고 패킷을 중계할 때는 먼저 라우터의 포트 부분이 수신처가 되어 이더넷의 패킷 수신 동작을 실행합니다. 중계 대상을 조사한 수 이번에는 포트 부분이 송신처가 되어 이더넷의 패킷 송신 동작을 실행하는데, 이곳이 스위칭 허브와 다른 부분입니다. 즉, 스위칭 허브는 들어온 패킷을 전송하기만 하고. 자신이 송신처나 수신처가 되지 않습니다.
 ```
