Update 7. FireWall의 동작 원리는?.md

--- a/보이저엑스/7. FireWall의 동작 원리는?.md
+++ b/보이저엑스/7. FireWall의 동작 원리는?.md
@@ -2,7 +2,38 @@
 
 ```
 
+1) 패킷 필터링형이 주류이다
+
+- 서버의 설치 장소와 관계 없이 지금은 바로 앞에 방화벽이 있는 것이 보통입니다.
+  그래서 패킷이 방화벽을 통과하는 곳부터 서버측의 탐험 여행을 시작하기로 합니다.
+
+- 방화벽의 기본이 되는 개념은 앞에서 설명했듯이 특정 서버와 해당 서버 안의 특정 애플리케이션에 액세스하는 패킷만 통과시키고,
+  그 외의 패킷을 차단합니다.
+  그러나 특정 서버나 특정 애플리케이션의 패킷만 통과시킨다고 간단히 말했지만,
+  네트워크에는 다양한 종류의 패킷이 많이 흐릅니다.
+  그러므로 이 중에서 통과시킬 패킷과 차단할 패킷을 선별하는 것은 간단한 일이 아니기 때문에
+  지금까지 다양한 방법이 고안되었습니다.
+
+- 어느 방법으로도 방화벽의 목적을 수행할 수 있지만, 성능, 가격, 사용 편의성 등의 이유로
+  지금은 패킷 필터링형이 가장 만힝 보급되었습니다.
+  그래서 이 탐험은 패킷 필터링형에 초점을 맞춰 탐색해 보겠습니다.
 
 
+2) 패킷 필터링의 조건 설정 개념
+
+- 패킷의 헤더에는 통신 동작을 제어하는 제어 정보가 들어 있으므로, 이것을 조사하면 여러 가지 사항을 알 수 있습니다.
+  그 중에서서도 [표5-1]에 정리한 항목은 패킷 필터링의 조건 설정에서 자주 사용하는 것입니다.
+  하지만 이 표의 설명만으로는 차단하는 조건을 이해하기 어려우므로, 구체적인 예를 들어 설명하겠습니다.
+
+- [그림 5-2]와 같이 공개용 서버를 설치하는 LAN과 사내 LAN이 분리되어 있고,
+  웹 서버는 공개 서버용 LAN에 접속되어 있다고 가정합니다.
+  그리고 인터넷에서 웹 서버에 대한 액세스를 허가하지 않으면 웹 서버에서 인터넷의 액세스를 금지하도록 패킷을 차단합니다.
+
+- 이전에는 웹 서버에서 인터넷측에 대한 액세스를 금지하는 예가 적었습니다.
+  하지만 지금은 서버에 기생하며 여기에서 다른 서버에 감염되어 가는 부정 소프트웨어가 있으므로,
+  감염을 막기 위해 웹 서버에서 인터넷측에 액세스하는 것을 금지하고 있습니다.
+-> 이러한 상황에서 패킷 필터링의 조건을 어떻게 설정할까요? 이것을 예로 하여 패킷 필터링의 개념을 설명하겠습니다.
+
+- 패킷 필터링의 조건ㅇ르 
 
 ```
