Update 7. FireWall의 동작 원리는?.md

--- a/보이저엑스/7. FireWall의 동작 원리는?.md
+++ b/보이저엑스/7. FireWall의 동작 원리는?.md
@@ -34,6 +34,38 @@
   감염을 막기 위해 웹 서버에서 인터넷측에 액세스하는 것을 금지하고 있습니다.
 -> 이러한 상황에서 패킷 필터링의 조건을 어떻게 설정할까요? 이것을 예로 하여 패킷 필터링의 개념을 설명하겠습니다.
 
-- 패킷 필터링의 조건ㅇ르 
+- 패킷 필터링의 조건을 설정할 때는 먼저 패킷의 흐름을 착안합니다.
+  그리고 수신처 ip 주소와 송신처 ip 주소에 따라 시점과 종점을 판단합니다.
+  [그림 5-2]의 1)의 예라면 인터넷에서 웹 서버를 향해 패킷이 흐릅니다.
+  인터넷에서 보내오는 패킷은 시점을 지정할 수 없지만, 흐름의 종점은 웹 서버가 되므로 이것을 조건으로 설정하고
+  조건에 해당하는 패킷만 통과시킵니다.
+  즉, 시점(송신처 ip 주소)은 어디라도 상관없으므로, 종점(수신처 IP 주소)이 웹 서버의 ip 주소에 일치하는 패킷은 통과시킨다는 조건을 선정하면 됩니다.
+  [그림 5-2]의 1행. 송신처 ip 주소에 따라 시점을 지정할 수 있으면, 이것도 조건에 추가합니다.
+  이 예와 같이 시점을 지정할 수 없는 경우에는 송신처 ip 주소를 조건으로 지정하지 않아도 상관없습니다.
+  
+- 이렇게 해서 인터넷측에서 웹 서버로 흘러가는 패킷은 방화벽을 통과하지만, 이것만으로는 액세스 동작이 제대로 작동하지 않습니다.
+  패킷을 받으면 정확하게 도착했는지를 송신측에 알리는 수신 확인 응답의 구조가 작용하므로,
+  웹 서버에서 인터넷측으로 흐르는 패킷도 있기 때문입니다.
+  웹 서버에서 클라이언트에 보내는 데이터가 있고, 이 패킷도 웹 서버에서 인터넷측으로 흘러간 후 그곳에서 시점(송신처 ip 주소)이
+  웹 서버의 주소에 일치하는 패킷도 통과합니다.
+  이와 같이 수신처나 송신처의 주소에 따라 패킷이 어디서, 어디로 흘러가는지를 판단하여 통과시킬 것인지, 차단할 것인지 결정하는 것이 첫걸음입니다.
+
+
+3) 애플리케이션을 한정할 때 포트 번호를 사용한다
+
+- 이것뿐이라면 인터넷과 웹 서버 사이를 흐르는 패킷은 전부 통과해서 위험한 상태가 됩니다.
+  예를 들어, 서버 머신에서 파일 서버 기능이 유효하므로 네트워크를 경유하여 파일에 부정으로 액세스할 경우
+  정보가 누설될지도 모릅니다.
+  위험성이 있는 것은 파일 서버만이 아닙니다. 매일같이, 해가 거듭할수록 보안 구멍이 발견되는 상황이므로
+  어디에 어떤 위험성이 잠재하는지 모릅니다.
+  그러므로 불필요한 것, 이 예에서는 웹 이외의 애플리케이션의 패킷을 전부 차단하는 쪽이 좋습니다.
+  
+- 이와 같이 애플리케이션을 한정할 때는 tcp 헤더나 UDP 헤더에 기록되어 있는 포트 번호를 조건으로 추가합니다.
+  웹 서버의 포트 번호는 80번으로 결정되어 있으므로, 전술한 수신처 ip 주소 및 송신처 ip 주소에 수신처 포트 번호가 80번인 경우에 대한 조건도 추가합니다.
+  즉, 수신처 ip 주소가 웹 서버의 주소와 일치하고, 수신처 포트 번호가 80번앤 패킷은 통과합니다.
+  또한, 송신처 ip 주소가 웹 서버의 주소와 일치하고 송신처 포트 번호가 80번인 패킷도 통과하도록 설정합니다.
+  그리고 웹 서버 이외의 애플리케이션에 대한 액세스를 허가할 경우에는 이 애플리케이션의 포트 번호를 설정하여 이것이 통과하도록 합니다.
+
+   
 
 ```
