Update 7. FireWall의 동작 원리는?.md

--- a/보이저엑스/7. FireWall의 동작 원리는?.md
+++ b/보이저엑스/7. FireWall의 동작 원리는?.md
@@ -15,7 +15,7 @@
   지금까지 다양한 방법이 고안되었습니다.
 
 - 어느 방법으로도 방화벽의 목적을 수행할 수 있지만, 성능, 가격, 사용 편의성 등의 이유로
-  지금은 패킷 필터링형이 가장 만힝 보급되었습니다.
+  지금은 패킷 필터링형이 가장 많이 보급되었습니다.
   그래서 이 탐험은 패킷 필터링형에 초점을 맞춰 탐색해 보겠습니다.
 
 
