--- a/보이저엑스/7. FireWall의 동작 원리는?.md
+++ b/보이저엑스/7. FireWall의 동작 원리는?.md
@@ -67,5 +67,52 @@
   그리고 웹 서버 이외의 애플리케이션에 대한 액세스를 허가할 경우에는 이 애플리케이션의 포트 번호를 설정하여 이것이 통과하도록 합니다.
 
    
+4) 컨트롤 비트로 접속 방향을 판단한다
+
+- 이렇게 해서 애플리케이션도 지정했지만 아직 조건이 부족합니다.
+  웹 서버에서 인터넷측에 액세스하는 동작을 정지시킬 수 없기 때문입니다.
+  웹의 동작은 TCP 프로토콜을 사용하여 양방향으로 패킷이 흐르므로 단순히 웹 서버에서 인터넷으로 흐르는 패킷을 정지시키면
+  인터넷에서 웹 서버에 액세스하는 동작도 정지됩니다.
+
+- 패킷이 흐르는 방향이 아니라 액세스 방향을 판단하여 정지시켜야 하는데, 여기에서 도움이 되는 것이 TCP 헤더에 있는 컨트롤 비트입니다.
+  TCP는 최초에 행하는 접속 단계의 동작에서 3개의 패킷이 흐르는데,
+  최초의 패킷만 TCP 컨트롤 비트의 SYN이라는 비트가 1로 되고, ACK라는 비트가 0이 됩니다.
+  다른 패킷에서 같은 값을 취하는 경우는 없으므로 이 값을 조사해서 최초의 패킷과 두 번째 이후의 패킷을 판별할 수 있습니다.
+
+- 최초의 패킷이 웹 서버측에서 인터넷측으로 흘러갈 경우 이것을 차단하도록 설정하면 어떻게 될까요?
+  이것을 차단하면 상대로부터 두 번째 패킷이 돌아오는 경우가 없으므로 당연히 TCP의 접속 동작은 실패로 끝납니다.
+  즉, 웹 서버가 기점이 되어 인터넷에 액세스하려고 해도 접속 동작이 틀림 없이 실패한다는 것입니다.
+  이렇게 해서 웹 서버에서 인터넷에 액세스하는 동작을 정지시킬 수 있습니다.
+
+- 인터넷측에서 웹 서버에 액세스하는 패킷은 어떻게 될까요?
+  인터넷측에서 웹 서버에 액세스할 때 최초의 패킷은 수신처가 웹 서버를 나타내고,
+  [그림 5-2]의 표에서 첫 번째 행의 조건에 해당하므로 패킷 필터링을 통과합니다.
+  두 번째 패킷은 송신처가 웹 서버를 나타내지만, TCP 컨트롤 비트의 조건이 두 번째 행과 합치되지 않으므로,
+  세 번째 행의 조건에 합치되어 패킷 필터링을 통과합니다.
+
+- 그 후의 패킷도 첫 번째 행이나 세 번째 행 중 어느 하나에 합치됩니다.
+  결국 인터넷측에서 웹 서버에 액세스할 때 흐르는 패킷은 전부 패킷 필터링을 통과합니다.
+
+- 수신처 IP 주소, 송신처 IP 주소, 수신처 포트 번호, 송신처 포트 번호, TCP 컨트롤 비트를 조건으로 사용하고,
+  통신의 시점과 종점, 애플리케이션의 종류, 액세스 방향을 판별하는 방법을 설명했는데,
+  조건으로 사용하는 항목은 [표5-1]과 같이 많습니다.
+  이것을 조합하면 대상이 되는 패킷을 찾아낼 수 있습니다.
+  이렇게 해서 허가하는 액세스 동작에서 흐르는 패킷과 그 외의 패킷을 완전히 선별할 수 있을 때까지 조건을 추가합니다.
+  그리고 액세스를 허가하는 패킷만 통과시키고, 그 외는 차단하도록 조건을 설정합니다.
+
+- 실제로는 통과시키는 것과 차단하는 것을 완전히 선별할 수 없는 경우도 있는데,
+  DNS 서버에 대한 액세스가 대표적인 예입니다.
+  DNS 서버에 조회하는 동작은 UDP를 사용하는데, UDP는 TCP와 달리 접속 단계의 동작이 없으므로,
+  TCP처럼 컨트롤 비트에 의해 액세스 방향을 판별할 수 없습니다.
+  그러므로 사내에서 인터넷의 DNS 서버에 액세스하는 것을 허가하고, 인터넷에서 사내의 DNS 서버에 액세스하는 패킷은
+  차단한다는 조건을 설정할 수 없습니다.
+  이 성질은 DNS뿐만 아니라 UDP를 사용하는 애플리케이션에 공통입니다.
+  이와 같은 경우에는 어느 정도 위험을 각오한 상태에서 애플리케이션의 패킷을 전부 통과시키거나,
+  불편을 감수하고 애플리케이션을 전면적으로 차단하는 방법을 선택해야 합니다.
+
+
+
+   
+
 
 ```
