--- a/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
+++ b/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
@@ -6,6 +6,61 @@
 채팅 시스템 하나쯤 사용하지 않는 사람은 드물다
 그림 12-1에 현재 시장에서 가장 널리 쓰이고 있는 채팅 시스템을 몇 가지 나열해 보았다
 
+채팅 앱이라고 했을 때, 사람들이 떠올리는 것은 제각각이다.
+그러니 요구사항을 확실하게 해 두는 것이 아주 중요하다.
+예를 들어, 면접관이 생각하고 있는 게 일대일 채팅 앱일 때 그룹 채팅 앱을 설계하면 곤란할 것이다.
+기능 요구사항을 확실히 알아두도록 하자.
 
+1단계) 문제 이해 및 설계 범위 확정
+- 어떤 채팅 앱을 설계하려는지 확실히 해 두는 것이 면접에서 가장 중요하다.
+  현재 시장에 나와 있는 앱들을 보면 페이스북 메신저, 위챗, 왓츠앱처럼 1:1 채팅에 집중하는 앱들이 있는 가 하면
+  슬랙(Slack) 같은 그룹 채팅에 중점을 둔 업무용 앱이나, 게임 채팅에 쓰이는 디스코드(Discord)같이
+  대규모 그룹의 소통과 응답지연(latency)이 낮은 음성 채팅에 집중하는 앱도 있다.
+
+- 따라서 초반에 던져야 하는 질문들은 면접관이 원하는 앱이 정확히 무엇인지 알아내기 위한 것이어야 한다.
+  적어도 설계 대상이 1:1 채팅 앱인지 아니면 그룹 채팅 앱인지 정도는 알아내야 한다.
+  아래는 면접관이 던져볼 수 있는 질문의 사례다
+
+지원자: 어떤 앱을 설계해야 하나요? 1:1 채팅 앱입니까 아니면 그룹 채팅 앱입니까?
+면접관: 둘 다 지원할 수 있어야 합니다.
+지원자: 모바일 앱인가요 아니면 웹 앱인가요?
+면접관: 둘 다 입니다.
+지원자: 처리해야 하는 트래픽 규모는 어느 정도입니까?
+면접관: 일별 능동 사용자 수 기준으로 5천만명을 처리할 수 있어야 합니다.
+지원자: 그룹 채팅의 경우에 인원 제한이 있습니까?
+면접관: 최대 100명까지 참가할 수 있습니다.
+지원자: 중요 기능으로 어떤 것이 있을까요? 가령, 첨부파일도 지원할 수 있어야 하나요?
+면접관: 1:1 채팅, 그룹 채팅, 사용자 접속상태 표시를 지원해야 합니다.
+       텍스트 메시지만 주고받을 수 있습니다.
+지원자: 메시지 길이에 제한이 있나요?
+면접관: 네, 100,000자 이하여야 합니다.
+지원자: 종단 간 암호화(end-to-end encryption)을 지원해야 하나요?
+면접관: 현재로서는 필요 없습니다만, 시간이 허락하면 논의해볼 수 있겠습니다.
+지원자: 채팅 이력은 얼마나 오래 보관해야 할까요?
+면접관: 영원히요.
+
+이번 장에서 우리는 페이스북 메신저와 유사한 채팅 앱을 설계해볼 것이다.
+이 앱은 다음과 같은 기능을 갖는다.
+
+- 응답지연이 낮은 일대일 채팅 기능
+- 최대 100명까지 참여할 수 있는 그룹 채팅 기능
+- 사용자의 접속상태 표시 기능
+- 다양한 단말 지원. 하나의 계정으로 여러 단말에 동시 접속 지원
+- 푸시 알림
+
+- 그리고 위의 질의응답 사례에 나온 대로, 5천만 DAU를 처리할 수 있도록 할 것이다.
+
+
+2단계) 개략적 설계안 제시 및 동의 구하기
+
+- 이 문제에 대한 훌륭한 답을 내기 위해서는 클라이언트와 서버의 통신 방법에 대한 기본적 지식은 갖추고 있어야만 한다.
+  채팅 시스템의 경우 클라이언트는 모바일 앱이거나 웹 애플리케이션이다.
+  클라이언트는 서로 직접 통신하지 않는다.
+  대신, 각 클라이언트는 위에 나열한 모든 기능을 지원하는 채팅 서비스와 통신한다.
+  우선은 기본 기능에 집중하도록 하자. 이 태이 서비스는 아래 기능을 제공해야 한다.
+
+- 클라이언트들로부터 메시지 수신
+- 메시지 수신자(recipient) 결정 및 전달
+- 수신자가 접속(online) 상태가 아닌 경우에는 접속할 때까지 해당 메시지 보관
 
 ```
