Update 13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md

--- a/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
+++ b/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
@@ -63,4 +63,47 @@
 - 메시지 수신자(recipient) 결정 및 전달
 - 수신자가 접속(online) 상태가 아닌 경우에는 접속할 때까지 해당 메시지 보관
 
+- 그림 12-2에 클라이언트(메시지 송신 클라이언트와 수신 클라이언트)와 채팅 서비스 사이의 관계를 요약해 보았다
+-> 채팅을 시작하려는 클라이언트는 네트워크 통신 프로토콜을 사용하여 서비스에 접속한다
+-> 따라서 채팅 서비스의 경우 어떤 통신 프로토콜을 사용할 것인가도 중요한 문제다
+   면접관과 상의하도록 하자
+
+- 대부분의 클라이언트/서버 애플리케이션에서 요청을 보내는 것은 클라이언트인데, 채팅 시스템의 경우도 마찬가지다.
+  메시지 송신 클라이언트(sender)가 이 역할을 한다.
+  그림 12-2에서 송신 클라이언트는 수신 클라이언트에게 전달할 메시지를 채팅 서비스에 보낼 때,
+  오랜 세월 검증된 HTTP 프로토콜을 사용한다.
+  HTTP는 현재 웹에서 가장 널리 사용되는 프로토콜이다.
+  이 그림에서 클라이언트는 채팅 서비스에 HTTP 프로토콜로 연결한 다음 메시지를 보내어 수신자에게 해당 메시지를 전달하라고 알린다.
+  채팅 서비스와의 접속에는 keep-alive 헤더를 사용하면 효율적인데, 클라이언트와 서버 사이의 연결을 끊지 않고 계쏙 유지할 수 있어서다.
+  TCP 접속 과정에서 발생하는 핸드셰이크 횟수를 줄일 수 있음은 물론이다.
+  HTTP는 메시지 전송 용도로는 괜찮은 선택이며, 페이스북 같은 많은 대중적 채팅 프로그램이 초기에 HTTP를 사용했다.
+
+- 하지만 메시지 수신 시나리오는 이것보다 복잡하다.
+  HTTP는 클라이언트가 연결을 만드는 프로토콜이며, 서버에서 클라이언트로 임의 시점에 미시지를 보내는 데는 쉽게 쓰일 수 없다.
+  서버가 연결을 만드는 것처럼 동작할 수 있도록 하기 위해 많은 기법이 제안되어 왔는데,
+  폴링(polling), 롱 폴링(long polling), 웹소켓(WebSocket) 등이 그런 기술이다.
+  이들은 시스템 설계 면접에서 폭넓게 사용되는 중요한 기술이므로 그 각각을 좀 더 자세히 살펴보겠다.
+
+(1) 폴링
+- 그림 12-3에 제시한 대로, 폴링은 클라이언트가 주기적으로 서버에게 새 메시지가 있느냐고 물어보는 방법이다.
+  폴링 비용은 폴링을 자주하면 할수록 올라간다.
+  답해줄 메시지가 없는 경우에는 서버 자원이 불필요하게 낭비된다는 문제도 있다.
+
+(2) 롱 폴링
+- 폴링은 여러 가지로 비효율적일 수 있어서 나온 기법이 롱 폴링(long polling)이다.
+  롱 폴링의 경우 클라이언트는 새 메시지가 반환됙더나 타임아웃 될 때까지 연결을 유지한다.
+  클라이언트는 새 메시지를 받으면 기존 연결을 종료하고, 서버에 새로운 요청을 보내어 모든 절차를 다시 시작한다.
+  이 방법에는 다음과 같은 약점이 있다.
+
+- 메시지를 보내는 클라이언트와 수신하는 클라이언트가 같은 채팅 서버에 접속하게 되지 않을 수도 있다.
+  HTTP 서버들은 보통 무상태(Stateless) 서버다.
+  로드밸런싱을 위해 라운드 로빈(round robin) 알고리즘을 사용하는 경우,
+  메시지를 받은 서버는 해당 메시지를 수신할 클라이언트와의 롱 폴링 연결을 가지고 있지 않은 서버일 수 있는 것이다.
+
+- 서버 입장에서는 클라이언트가 연결을 해제했는지 아닌지 알 좋은 방법이 없다.
+
+- 여전히 비효율적이다. 메시지를 많이 받지 않는 클라이언트도 타임아웃이 일어날 때마다 주기적으로 서버에 다시 접속할 것이다.
+
+(3) 웹소켓
+
 ```
