Update 13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md

--- a/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
+++ b/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
@@ -57,7 +57,7 @@
   채팅 시스템의 경우 클라이언트는 모바일 앱이거나 웹 애플리케이션이다.
   클라이언트는 서로 직접 통신하지 않는다.
   대신, 각 클라이언트는 위에 나열한 모든 기능을 지원하는 채팅 서비스와 통신한다.
-  우선은 기본 기능에 집중하도록 하자. 이 태이 서비스는 아래 기능을 제공해야 한다.
+  우선은 기본 기능에 집중하도록 하자. 이 채팅 서비스는 아래 기능을 제공해야 한다.
 
 - 클라이언트들로부터 메시지 수신
 - 메시지 수신자(recipient) 결정 및 전달
