--- a/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
+++ b/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
@@ -105,5 +105,37 @@
 - 여전히 비효율적이다. 메시지를 많이 받지 않는 클라이언트도 타임아웃이 일어날 때마다 주기적으로 서버에 다시 접속할 것이다.
 
 (3) 웹소켓
+- 웹소켓(WebSocket)은 서버가 클라이언트에게 비동기(async) 메시지를 보낼 때 가장 널리 사용하는 기술이다.
+  그림 12-5에 이 기술이 어떻게 동작하는지를 보였다.
+
+- 웹소켓 연결은 클라이언트가 시작한다. 한번 맺어진 연결은 항구적이며 양방향이다.
+  이 연결은 처음에는 HTTP 연결이지만 특정 핸드셰이크 절차를 거쳐 웹소켓 연결로 업그레이드 된다.
+  일단 이 항구적인 연결이 만들어지고 나면 서버는 클라이언트에게 비동기적으로 메시지를 전송할 수 있다.
+  웹소켓은 일반적으로 방화벽이 있는 환경에서도 잘 동작한다.
+  80이나 443처럼 HTTP 혹은 HTTPS 프로토콜이 사용하는 기본 포트번호를 그대로 쓰기 때문이다.
+
+- 앞서 우리는 HTTP 프로토콜이 메시지를 보내려는 클라이언트에게 썩 괜찮은 프로토콜임을 설명했다.
+  하지만 웹소켓은 이에 더해 양방향 메시지 전송까지 가능하게 하므로, 웹소켓 대신 HTTP를 굳이 고집할 이유는 없는 셈이다.
+  그림 12.6에 어떻게 웹소켓이 메시지 전송이나 수신에 쓰일 수 있는지 간략히 제시한다.
+
+- 웹소켓을 이용하면 메시지를 보낼 때나 받을 때 동일한 프로토콜을 사용할 수 있으므로,
+  설계뿐 아니라 구현도 단순하고 직관적이다.
+  유의할 것은 웹소켓 연결은 항구적으로 유지되어야 하기 때문에 서버 측에서 연결 관리를 효율적으로 해야 한다는 것이다.
+
+(4) 개략적 설계안
+- 방금 우리는 클라이언트와 서버 사이의 주 통신 프로토콜로 웹소켓을 사용하기로 결정했다.
+  하지만 다른 부분에서는 굳이 웹소켓을 쓸 필요는 없다.
+  사실 대부분의 기능(회원가입, 로그인, 사용자 프로파일 등)은 일반적인 HTTP상에서 구현해도 된다.
+
+- 지금부터 전체 시스템의 개략적 설계안을 살펴보자.
+  그림 12-7에 나온 대로, 이번 장에서 다루는 채팅 시스템은 세 부분으로 나누어 볼 수 있다.
+  즉, 무상태 서비스, 상태 유지(stateful) 서비스, 그리고 제3자 서비스 연동의 세 부분으로 나누어 살펴볼 수 있다.
+
+(4-1) 무상태 서비스
+- 이 설계안에서 무상태 서비스는 로그인, 회원가입, 사용자 프로파일 표시 등을 처리하는 전통적인 응답/요청 서비스다.
+  무상태 서비스가 제공하는 기능은 많은 웹사이트와 앱이 보편적으로 제공하는 기능이다.
+  무상태 서비스는 로드밸런서 뒤에 위치한다.
+  로드밸런서가 하는 일은 요청을 그 경로에 맞는 서비스로 정확하게 전달하는 것이다.
+  로드밸런서 뒤에 오는 서비스는 모놀리틱(monolithic) 서비스 일 수도 있고 마이크로서비스 일 수도 있다.  
 
 ```
