--- a/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
+++ b/보이저엑스/13. 동시 사용자 1만명을 지원하는 채팅 서버는 어떻게 만들겠는가?.md
@@ -136,6 +136,177 @@
   무상태 서비스가 제공하는 기능은 많은 웹사이트와 앱이 보편적으로 제공하는 기능이다.
   무상태 서비스는 로드밸런서 뒤에 위치한다.
   로드밸런서가 하는 일은 요청을 그 경로에 맞는 서비스로 정확하게 전달하는 것이다.
-  로드밸런서 뒤에 오는 서비스는 모놀리틱(monolithic) 서비스 일 수도 있고 마이크로서비스 일 수도 있다.  
+  로드밸런서 뒤에 오는 서비스는 모놀리틱(monolithic) 서비스 일 수도 있고 마이크로서비스 일 수도 있다.
+
+(4-2) 상태 유지 서비스
+- 본 설계안에서 유일하게 상태 유지가 필요한 서비스는 채팅 서비스다
+  각 클라이언트가 채팅 서버와 독립적인 네트워크 연결을 유지해야 하기 때문이다.
+  클라이언트는 보통 서버가 살아 있는 한 다른 서버로 연결을 변경하지 않는다.
+  앞서 간단히 설명한 서비스 탐색 서비스는 채팅 서비스와 긴밀히 협력하여 특정 서버에 부하가 몰리지 않도록 한다.
+  구체적인 내용은 나중에 다시 자세히 살펴볼 것이다.
+
+(4-3) 제3자 서비스 연동
+- 채팅 앱에서 가장 중요한 제3자 서비스는 푸시 알림이다.
+  새 메시지를 받았다면 설사 앱이 실행 중이지 않더라도 알림을 받아야 해서다.
+  따라서 푸시 알림 서비스와의 통합은 아주 중요하다.
+  이에 대해 좀 더 많은 정보가 필요하다면, 제3장 "알림 시스템 설계"를 참고하자.
+
+(4-4) 규모 확장성
+- 트래픽 규모가 얼마 되지 않을 때는 방금 설명한 모든 기능을 서버 한 대로 구현할 수 있다.
+  우리가 지금 설계 중인 시스템의 경우처럼 대량의 트래픽을 처리해야 하느 ㄴ경우에도 이론적으로는
+  모든 사용자 연결을 최신 클라우드 서버 한 대로 처리할 수 있기는 하다.
+  이 때, 따져봐야 할 것은 서버 한 대로 얼마나 많은 접속을 동시에 허용할 수 있느냐다.
+
+- 이번 장에서 다루는 시스템의 경우에는 동시 접속자가 1M이라고 가정할 것인데,
+  접속당 10K의 서버 메모리가 필요하다고 본다면(아주 개략적으로 추정한 수치이고 프로그래밍 언어에 따라 달라질 수 있다.)
+  10GB 메모리만 있으면 모든 연결을 다 처리할 수 있을 것이다.
+
+- 하지만 모든 것을 서버 한 대에 담은 설계안을 내밀면 면접에서 좋은 점수를 따기는 어려울 것이다.
+  누구도 그 정도 규모의 트래픽을 서버 한 대로 처리하려 하지 않을 것이기 때문이다.
+  거기에는 여러 가지 이유가 있는데, SPOF(Single-Point-Of-Failure)도 그 가운데 하나다.
+
+- 하지만 서버만 한 대 갖는 설계안에서 출발하여 점차로 다듬어 나가는 것은 괜찮다.
+  면접관에게 '이것은 그저 시작일 뿐'이라는 것만 정확하게 전달해 놓으면 된다.
+  아무튼 지금까지 설명한 모든 것을 하나로 묶으면 그림 12-8과 같은 개략적 설계안이 만들어진다.
+
+- 그림 12-8에서 유의할 것은 실시간으로 메시지를 주고 받기 위해 클라이언트는
+  채팅 서버와 웹소켓 연결을 끊지 않고 유지한다는 것이다.
+
+(1) 채팅 서버는 클라이언트 사이에 메시지를 중계하는 역할을 담당한다
+(2) 접속상태 서버(presence server)는 사용자의 접속 여부를 관리한다
+(3) API 서버는 로그인, 회원가입, 프로파일 변경 등 그 외 나머지 전부를 처리한다.
+(4) 알림 서버는 푸시 알림을 보낸다.
+(5) 키-값 저장소(key-value store)에는 채팅 이력(chat history)을 보관한다.
+    시스템에 접속한 사용자는 이전 채팅 이력을 전부 보게 될 것이다.
+
+
+(4-5) 저장소
+- 이제 서버도 준비되었고, 제3자 서비스 연동도 끝났다고 하자.
+  이 기술 스택 깊은 곳에 데이터 계층이 있다.
+  데이터 계층을 올바르게 만드는데는 노력이 필요하다.
+  중요한 것 하나는 어떤 데이터베이스를 쓰느냐다.
+  관계형 데이터베이스를 쓸 것인가 아니면 NoSQL을 채택할 것인가?
+  이 질문에 대한 올바른 답을 하기 위해 중요하게 따져야 할 것은, 데이터의 유형과 읽기/쓰기 연산의 패턴이다.
+
+- 채팅 시스템이 다루는 데이터는 보통 두 가지다.
+  첫 번째는 사용자 프로파일, 설정, 친구 목록처럼 일반적인 데이터다.
+  이런 데이터는 안정성을 보장하는 관계형 데이터베이스에 보관한다.
+  다중화(replication)와 샤딩(sharding)은 이런 데이터의 가용성과 규모확장성을 보증하기 위해 보편적으로 사용되는 기술이다.
+
+- 두 번째 유형의 데이터는 채팅 시스템에 고유한 데이터로, 바로 채팅 이력(chat history)이다.
+  이 데이터를 어떻게 보관할지 결정하려면 읽기/쓰기 연산 패턴을 이해해야 한다.
+
+(1) 채팅 이력 데이터의 양은 엄청나다. [2]에 따르면 페이스북 메신저나 왓츠앱은 매일 600억(60billion) 개의 메시지를 처리한다.
+(2) 이 데이터 가운데 빈번하게 사용되는 것은 주로 최근에 주고 받은 메시지다.
+    대부분의 사용자는 오래된 메시지는 들여다보지 않는다.
+(3) 사용자는 대체로 최근에 주고받은 메시지 데이터만 보게 되는 것이 사실이나,
+    검색 기능을 이용하거나, 특정 사용자가 언급(mention)된 메시지를 보거나,
+    특정 메시지로 점프(jump)하거나 하여 무작위적인 데이터 접근을 하게 되는 일도 있다.
+    데이터 계층은 이런 기능도 지원해야 한다.
+(4) 1:1 채팅 앱의 경우 읽기:쓰기 비율은 대략 1:1 정도다.
+
+- 이 모두를 지원할 데이터베이스를 고르는 것은 아주 중요한 일이다. 본 설계안의 경우에는 키-값 저장소를 추천할 것인데,
+  그 이유는 다음과 같다.
+
+(1) 키-값 저장소는 데이터 접근 지연시간(latency)이 낮다.
+(2) 관계형 데이터베이스는 데이터 가운데 롱 테일(long tail)에 해당하는 부분을 잘 처리하지 못하는 경향이 있다.
+    인덱스가 커지면 데이터에 대한 무작위적 접근(random access)을 처리하는 비용이 늘어난다.
+(3) 이미 많은 안정적인 채팅 시스템이 키-값 저장소를 채택하고 있다.
+    페이스북 메신저나 디스코드가 그 사례다. 페이스북 메신저는 HBase를 사용하고 있고, 디스코드는 카산드라(Cassandra)를 이용하고 있다.
+
+
+(5) 데이터 모델
+- 키-값 저장소를 데이터 계층 기술로 사용하기로 했으니, 메시지 데이터를 어떻게 보관할 것인지 자세히 살펴보도록 하자.
+
+(1) 1:1 채팅을 위한 메시지 테이블
+- 그림 12-9는 1:1 채팅을 지원하기 위한 메시지 테이블의 사례다.
+  이 테이블의 기본 키(primary key)는 message_id로, 메시지 순서를 쉽게 정할 수 있도록 하는 역할도 담당한다.
+  created_at을 사용하여 메시지 순서를 정할 수는 없는데, 서로 다른 두 메시지가 동시에 만들어질 수도 있기 때문이다.
+
+(2) 그룹 채팅을 위한 메시지 테이블
+- 그림 12-10은 그룹 채팅을 위한 메시지 테이블의 사례다. (channel_id, message_id)의 복합 키(composite key)를 기본 키로 사용한다.
+  여기서 채널(channel)은 채팅 그룹과 같은 뜻이다.
+  channel_id는 파티션 키(partition key)로도 사용할 것인데, 그룹 채팅에 적용될 모든 질의는 특정 채널을 대상으로 할 것이기 때문이다.
+
+(3) 메시지 ID
+- message_id를 만드는 기법은 자세히 논의할 만한 가치가 있는 흥미로운 주제다.
+  message_id는 메시지들의 순서도 표현할 수 있어야 한다.
+  그러기 위해서는 다음과 같은 속성을 만족해야 할 것이다.
+
+(1) message_id의 값은 고유해야 한다.(uniqueness)
+(2) ID 값은 정렬 가능해야 하며 시간 순서와 일치해야 한다.
+    즉, 새로운 ID는 이전 ID보다 큰 값이어야 한다.
+
+- 이 두 조건을 어떻게 만족시킬 것인가? RDBMS라면 auto_increment가 대안이 될 수 있겠지만, NoSQL은 보통 해당 기능을 제공하지 않는다.
+
+- 두 번째 방법은 스노플레이크 같은 전역적 64-bit 순서 번호 생성기를 이용하는 것이다.
+  이에 대해서는 제7장 '분산 시스템을 위한 유일 ID 생성기 설계'에서 살펴본 바 있다.
+
+- 마지막 방법은 지역적 순서 번호 생성기(local sequence number generator)를 이용하는 것이다.
+  여기서 지역적이라 함은, ID의 유일성은 같은 그룹 안에서만 보증하면 충분하다는 것이다.
+  이 방법이 통하는 이유는 메시지 사이의 순서는 같은 채널,
+  혹은 같은 1:1 채팅 세션 안에서만 유지되면 충분하기 때문이다.
+  전역적 ID 생성기에 비해 구현하기 쉬운 접근법이다.
+
+
+(6) 상세 설계
+ - 개략적 설계안에 포함된 컴포넌트 가운데 몇 가지를 골라 좀 더 자세히 들여다 보게 되는 것은
+   면접장에서 흔히 벌어지는 일이다.
+   채팅 시스템의 경우에는 서비스 탐색(service discovery), 메시지 전달 흐름, 그리고 사용자 접속 상태를 표시하는 방법 정도가
+   좀 더 자세히 살펴볼 만한 부분이다.
+
+(6-1) 서비스 탐색
+- 서비스 탐색 기능의 주된 역할은 클라이언트에게 가장 적합한 채팅 서버를 추천하는 것이다.
+  이 때, 사용되는 기준으로는 클라이언트의 위치(geographical location), 서버의 용량(capacity) 등이 있다.
+  서비스 탐색 기능을 구현하는 데 널리 쓰이는 오픈 소스 솔루션으로는 아파치 주키퍼(Apache Zookeeper) 같은 것이 있다.
+
+- 사용 가능한 모든 채팅 서버를 여기 등록시켜 두고, 클라이언트가 접속을 시도하면 사전에 정한 기준에 따라
+  최적의 채팅 서버를 골라 주면 된다.
+
+- 그림 12-11은 주키퍼로 구현한 서비스 탐색 기능이 어떻게 동작하는지를 보여준다.
+
+(1) 사용자 A가 시스템에 로그인을 시도한다.
+(2) 로드밸런서가 로그인 요청을 API 서버들 가운데 하나로 보낸다.
+(3) API 서버가 사용자 인증을 처리하고 나면 서비스 탐색 기능이 동작하여 해당 사용자를 서비스할 최적의 채팅 서버를 찾는다.
+    이 예제의 경우에는, 채팅 서버 2가 선택되어 사용자 A에게 반환되었다고 하겠다.
+(4) 사용자 A는 채팅 서버 2와 웹소켓 연결을 맺는다.
+
+
+(6-2) 메시지 흐름
+- 채팅 시스템에 있어서 종단 간 메시지 흐름을 이해하는 것은 흥미로운 주제다.
+  이번 절에서는 1:1 채팅 메시지의 처리 흐름과 여러 단말 간 메시지 동기화 과정을 살펴본 다음,
+  그룹 채팅 메시지의 처리 흐름도 살펴볼 것이다.
+
+
+(1) 1:1 채팅 메시지 처리 흐름
+- 그림 12-12는 1:1 채팅에서 사용자 A가 B에게 보낸 메시지가 어떤 경로로 처리되는지를 보여준다.
+  1. 사용자 A가 채팅 서버 1로 메시지 전송
+  2. 채팅 서버 1은 ID 생성기를 사용해 해당 메시지의 ID 결정
+  3. 채팅 서버 1은 해당 메시지를 메시지 동기화 큐로 전송
+  4. 메시지가 키-값 저장소에 보관됨
+  5. (a) 사용자가 B가 접속 중인 경우 메시지는 사용자 B가 접속 중인 채팅 서버(본 예제의 경우에는 채팅 서버2)로 전송됨
+     (b) 사용자 B가 접속 중이 아니라면 푸시 알림 메시지를 푸시 알림 서버로 보냄
+  6. 채팅 서버 2는 메시지를 사용자 B에게 전송. 사용자 B와 채팅 서버 2 사이에는 웹소켓 연결이 있는 상태이므로
+     그것을 이용
+
+
+(2) 여러 단말 사이의 메시지 동기화
+- 여러 개 단말을 사용하는 사람은 많다. 지금부터 여러 단말 사이에 메시지 동기화는 어떻게 하는지 설명할 것이다.
+  그림 12-13은 그 한 사례다.
+
+- 그림 12-13에서 사용자 A는 전화기와 랩톱의 두 대 단말을 이용하고 있다.
+  사용자 A가 전화기에서 채팅 앱에 로그인한 결과로 채팅 서버 1과 해당 단말 사이에 웹 소켓 연결이 만들어져 있고,
+  랩톱에서 로그인한 결과로 역시 별도 웹소켓이 채팅 서버1에 연결되어 있는 상황이다.
+
+- 각 단말은 cur_max_message_id라는 변수를 유지하는데, 해당 단말에서 관측된 가장 최신 메시지의 ID를 추적하는 용도다.
+  아래 두 조건을 만족하는 메시지는 새 메시지로 간주한다.
+
+(1) 수신자 ID가 현재 로그인한 사용자 ID와 같다.
+(2) 키-값 저장소에 보관된 메시지로서, 그 ID가 cur_max_message_id보다 크다.
+
+- cur_max_message_id는 단말마다 별도로 유지 관리하면 되는 값이라 키-값 저장소에서 새 메시지를 가져오는 동기화 작업도 쉽게 구현할 수 있다.
+
+ 
+ 
 
 ```
