--- a/아키텍처/클린 아키텍처 질문.md
+++ b/아키텍처/클린 아키텍처 질문.md
@@ -1,35 +1,41 @@
 ```
 기술 질문
-클린 아키텍처에서의 도메인 레이어와 데이터 레이어 사이의 의존성 관리를 위한 전략은 무엇인가요?
-도메인 레이어에서 데이터 레이어로의 의존성 역전을 구현하기 위한 구체적인 방법은?
-의존성 주입을 통해 도메인 레이어와 데이터 레이어 간의 결합도를 어떻게 낮출 수 있나요?
-데이터 레이어에서 사용되는 DTO와 도메인 레이어에서 사용되는 엔터티 간의 변환 과정은 어떻게 이루어지나요?
-클린 아키텍처를 적용한 시스템에서 비즈니스 로직의 변경이 데이터 레이어에 미치는 영향은?
-클린 아키텍처에서 프레젠테이션 레이어와 도메인 레이어 사이의 상호작용은 어떻게 설계되어야 하나요?
-응집도와 결합도의 관점에서 볼 때, 의존성 주입(Dependency Injection)이 소프트웨어 아키텍처에 미치는 영향은 무엇인가요?
-의존성 주입을 사용하지 않았을 때와 비교했을 때의 장단점은 무엇인가요?
-의존성 주입을 구현하는 다양한 방법과 각 방법의 특징은?
-의존성 주입이 테스트 용이성에 미치는 영향은 무엇인가요?
-의존성 주입을 통해 시스템의 확장성과 유지보수성을 어떻게 향상시킬 수 있나요?
-의존성 주입 패턴을 적용할 때 주의해야 할 점은 무엇인가요?
-클린 아키텍처에서의 프레젠테이션 레이어의 역할과 중요성에 대해 설명해주세요.
-프레젠테이션 레이어와 도메인 레이어 간의 데이터 흐름은 어떻게 관리되나요?
-프레젠테이션 레이어에서 발생할 수 있는 공통적인 문제점과 해결 방법은?
-클린 아키텍처를 적용한 시스템에서 프레젠테이션 레이어의 변경이 다른 레이어에 미치는 영향은?
-프레젠테이션 레이어에서 사용자 인터페이스(UI)와 비즈니스 로직을 분리하는 방법은?
-프레젠테이션 레이어의 테스트 전략과 고려해야 할 사항은 무엇인가요?
-소프트웨어 아키텍처에서의 '도메인 주도 설계(Domain-Driven Design, DDD)'의 핵심 원칙과 클린 아키텍처와의 관계를 설명해주세요.
-도메인 주도 설계에서의 애그리거트(Aggregate)와 엔터티(Entity), 값 객체(Value Object)의 차이점은?
-도메인 주도 설계를 적용할 때 발생할 수 있는 문제점과 해결 방법은?
-클린 아키텍처와 도메인 주도 설계를 함께 적용하는 경우의 장단점은 무엇인가요?
-도메인 주도 설계에서의 리포지토리 패턴의 역할과 중요성은?
-도메인 주도 설계를 적용한 시스템에서의 도메인 이벤트 처리 방법은?
-클린 아키텍처에서의 데이터 레이어 설계 시 고려해야 할 주요 사항과 이를 통한 시스템의 유연성 확보 방법은?
-데이터 레이어에서의 객체 관계 매핑(Object-Relational Mapping, ORM)의 역할과 장단점은?
-데이터 레이어의 변경이 도메인 레이어에 미치는 영향과 이를 최소화하는 방법은?
-데이터 레이어에서의 트랜잭션 관리 전략과 그 중요성은?
-클린 아키텍처에서 데이터 레이어의 설계가 시스템의 확장성에 미치는 영향은?
-데이터 레이어에서의 캐싱 전략과 성능 최적화 방법은?
+
+1) 클린 아키텍처에서의 도메인 레이어와 데이터 레이어 사이의 의존성 관리를 위한 전략은 무엇인가요?
+- 도메인 레이어에서 데이터 레이어로의 의존성 역전을 구현하기 위한 구체적인 방법은?
+- 의존성 주입을 통해 도메인 레이어와 데이터 레이어 간의 결합도를 어떻게 낮출 수 있나요?
+- 데이터 레이어에서 사용되는 DTO와 도메인 레이어에서 사용되는 엔터티 간의 변환 과정은 어떻게 이루어지나요?
+- 클린 아키텍처를 적용한 시스템에서 비즈니스 로직의 변경이 데이터 레이어에 미치는 영향은?
+
+
+2) 클린 아키텍처에서 프레젠테이션 레이어와 도메인 레이어 사이의 상호작용은 어떻게 설계되어야 하나요?
+- 응집도와 결합도의 관점에서 볼 때, 의존성 주입(Dependency Injection)이 소프트웨어 아키텍처에 미치는 영향은 무엇인가요?
+- 의존성 주입을 사용하지 않았을 때와 비교했을 때의 장단점은 무엇인가요?
+- 의존성 주입을 구현하는 다양한 방법과 각 방법의 특징은?
+- 의존성 주입이 테스트 용이성에 미치는 영향은 무엇인가요?
+- 의존성 주입을 통해 시스템의 확장성과 유지보수성을 어떻게 향상시킬 수 있나요?
+- 의존성 주입 패턴을 적용할 때 주의해야 할 점은 무엇인가요?
+
+3) 클린 아키텍처에서의 프레젠테이션 레이어의 역할과 중요성에 대해 설명해주세요.
+- 프레젠테이션 레이어와 도메인 레이어 간의 데이터 흐름은 어떻게 관리되나요?
+- 프레젠테이션 레이어에서 발생할 수 있는 공통적인 문제점과 해결 방법은?
+- 클린 아키텍처를 적용한 시스템에서 프레젠테이션 레이어의 변경이 다른 레이어에 미치는 영향은?
+- 프레젠테이션 레이어에서 사용자 인터페이스(UI)와 비즈니스 로직을 분리하는 방법은?
+- 프레젠테이션 레이어의 테스트 전략과 고려해야 할 사항은 무엇인가요?
+
+4) 소프트웨어 아키텍처에서의 '도메인 주도 설계(Domain-Driven Design, DDD)'의 핵심 원칙과 클린 아키텍처와의 관계를 설명해주세요.
+- 도메인 주도 설계에서의 애그리거트(Aggregate)와 엔터티(Entity), 값 객체(Value Object)의 차이점은?
+- 도메인 주도 설계를 적용할 때 발생할 수 있는 문제점과 해결 방법은?
+- 클린 아키텍처와 도메인 주도 설계를 함께 적용하는 경우의 장단점은 무엇인가요?
+- 도메인 주도 설계에서의 리포지토리 패턴의 역할과 중요성은?
+- 도메인 주도 설계를 적용한 시스템에서의 도메인 이벤트 처리 방법은?
+
+5) 클린 아키텍처에서의 데이터 레이어 설계 시 고려해야 할 주요 사항과 이를 통한 시스템의 유연성 확보 방법은?
+- 데이터 레이어에서의 객체 관계 매핑(Object-Relational Mapping, ORM)의 역할과 장단점은?
+- 데이터 레이어의 변경이 도메인 레이어에 미치는 영향과 이를 최소화하는 방법은?
+- 데이터 레이어에서의 트랜잭션 관리 전략과 그 중요성은?
+- 클린 아키텍처에서 데이터 레이어의 설계가 시스템의 확장성에 미치는 영향은?
+- 데이터 레이어에서의 캐싱 전략과 성능 최적화 방법은?
 
 
 ```
