--- a/Message Queue/카프카.md
+++ b/Message Queue/카프카.md
@@ -3,3 +3,11 @@
 - Redis를 사용하여 세션 관리나 캐싱을 구현한 경험이 있다면, 그로 인한 성능 개선 결과를 공유해주세요.
 - Kafka를 도입하여 어떤 문제를 해결하고자 했나요? 실제로 어떤 효과를 보았나요?
 - Kafka의 데이터 유실 문제를 어떻게 방지하였나요? 실제로 적용한 해결 방법과 그 결과를 설명해주세요.
+
+
+2) 카프카(Kafka)를 이용하여 대용량 로그 처리 시스템을 설계한다면, 어떤 아키텍처를 고려할 것인가요?
+- 카프카의 파티셔닝(partitioning) 전략을 어떻게 설정하면 좋을까요?
+- 카프카 클러스터에서 노드 장애 발생 시, 데이터 손실 없이 처리하기 위한 방안은?
+- 실시간 스트리밍 데이터 처리를 위한 카프카 스트림(Kafka Streams)과 카프카 커넥트(Kafka Connect)의 차이점은 무엇인가요?
+- 대규모 카프카 클러스터 관리를 위한 모니터링 및 운영 팁은?
+- 카프카와 전통적인 메시지 큐 시스템(RabbitMQ, ActiveMQ 등)을 비교했을 때, 성능 및 확장성 측면에서의 장단점은?
