Update 쿠버네티는 어떻게 컨테이너를 실행하고 관리하는가.md

--- a/k8s/쿠버네티는 어떻게 컨테이너를 실행하고 관리하는가.md
+++ b/k8s/쿠버네티는 어떻게 컨테이너를 실행하고 관리하는가.md
@@ -70,5 +70,34 @@ p.50
 -> 이 과정은 컨테이너 런타임 인터페이스(CRI)라는 공통 API를 이용하여 컨테이너 런타임과 연동되는 형태로 진행된다.
 -> CRI를 사용하면 해당 노드가 어떤 컨테이너 런타임을 실행 중이더라도 같은 방식으로 노드를 관리할 수 있다.
 -> 컨테이너 생성과 삭제, 컨테이너 정보 확인 기능이 표준 API로 제공된다.
--> 파드 실행 중에는 노드가 컨테이너 런타임과 연동하며, 파드에 필요한 모든 컨테이너가 갖추어져 있는지 확인한다. 
+-> 파드 실행 중에는 노드가 컨테이너 런타임과 연동하며, 파드에 필요한 모든 컨테이너가 갖추어져 있는지 확인한다.
+
+- 그림 2-4를 보면 필자가 도커를 통해 파드에 들어 있던 컨테이너를 확인한 후 쿠버네티스가 어떻게 반응했는지 알 수 있다.
+-> 파드의 컨테이너 개수가 0이 되자마자 쿠버네티스가 즉각적으로 대체 컨테이너를 생성하여 파드를 복원했다.
+
+- 쿠버네티스가 이런 문제를 해결할 수 있는 이유는 컨테이너를 파드로 추상화했기 때문이다.
+-> 이상을 일으킨 컨테이너는 일시적인 문제일 뿐이며 파드는 그대로 있으므로, 새로운 컨테이너를 추가하여 파드 상태를 복원하면 된다
+-> 이것이 바로 쿠버네티스가 제공하는 자기수복성의 첫 번째 단계다.
+-> 파드 위로 더 쌓일 추상화를 통해 애플리케이션은 이 이상의 복원력을 가질 수 있다.
+
+- 파드 위로 얹히는 또 다른 추상화 중 하나가 바로 디플로이먼트다
+-> 디플로이먼트는 다음 절에서 다룰 것이다
+-> 다음 절로 넘어가기 전에 이 파드에서 실행항 애플리케이션이 무엇인지 알아보자.
+-> 이 애플리케이션은 웹 애플리케이션이다.
+-> 하지만 아직은 쿠버네티스에서 네트워크 트래픽을 파드로 전달하도록 설정하지 않았기 때문에 실행 중인 애플리케이션에 접근할 수 없다
+-> kubectl의 다른 기능을 사용하여 애플리케이션에 접근해 보겠다.
+
+- 필자의 환경에서 확인한 웹 페이지를 그림 2-5에 실었다.
+-> 보이는 바와 같이 간단한 웹 사이트다
+-> 웹 서버 및 웹 페이지 콘텐츠는 도커 허브에 공개된 컨테이너 이미지에 포함되어 있다.
+-> CRI를 준수하는 컨테이너 런타임은 모두 도커 허브에서 이미지를 내려받을 수 있다.
+-> 그러므로 여러분이 어떤 쿠버네티스 환경을 사용하더라도 이 애플리케이션은 필자의 환경에서처럼 동작할 것이다.
+
+-파드가 무엇인지 좀 감이 잡히는가? 파드는 쿠버네티스에서 컴퓨팅의 최소 단위다.
+-> 파드의 역할은 무엇인지 어떻게 동작하는지 잘 이해해야 한다.
+-> 하지만 파드는 원시 타입 리소스이므로 일반적으로 파드를 직접 실행할 일은 없다.
+-> 대개는 파드를 관리할 컨트롤러 객체를 따로 만들게 된다.
+
+
+
 ```
