Update 컨트롤러 객체와 함께 파드 실행하기.md

--- a/k8s/컨트롤러 객체와 함께 파드 실행하기.md
+++ b/k8s/컨트롤러 객체와 함께 파드 실행하기.md
@@ -32,3 +32,31 @@
 -> 첫번째는 앞서 kubectl이 run 명령을 사용해서 만든 것이고, 두 번째는 디플로이먼트가 생성했다
 -> 디플로이먼트가 생성한 파드 이름은 쿠버네티스가 지은 것으로, 디플로이먼트 이름 뒤에 무작위 문자열이 붙은 형태다. 
 
+- 이번 실습에서 알아야 할 중요한 점은 우리가 디플로이먼트는 만들었지만, 파드를 직접 만든 적은 없다는 것이다
+-> 디플로이먼트를 정의할 때, 우리에게 필요한 파드가 어떤 것인지 기술했다
+-> 그러면 디플로이먼트는 쿠버네티스 API를 통해 현재 동작 중인 리소스가 무엇이 있는지 살펴보고, 자신이 관리해야 할 파드가 없다는 사실을 발견하여
+  다시 쿠버네티스 API를 통해 자신에게 필요한 파드를 생성한다.
+-> 구체적으로 어떤 과정을 거쳤는가는 중요하지 않다
+-> 디플로이먼트만 만들면 우리에게 필요한 파드를 대신 만들어 준다는 점이 중요하다
+
+-하지만 디플로이먼트가 자신이 관리해야 할 리소스를 어떻게 추적하는지는 알아 둘 필요가 있다
+-> 이런 패턴은 쿠버네티스 전반에서 매우 많이 쓰인다.
+-> 모든 쿠버네티스 리소스는 간단한 키-값 쌍 형태의 레이블을 가지며, 이 레이블을 우리가 원하는 데이터를 담는 데 사용할 수 있다
+-> 예를 들어, 디플로이먼트에 release라는 레이블을 추가하고, 그 값을 20.04라고 지정한다면, 우리는 나중에 이 디플로이먼트가 배포 주기 20.05에 
+   배포된 것임을 알 수 있다
+-> 또한, 레이블은 디플로이먼트와 파드의 관계처럼 객체 간 관계를 표현해서 리소스와 리소스의 느슨한 연결을 만드는데도 쓰인다. 
+
+-필자의 환경에서 실행한 결과를 그림 2-8에 실었다
+-> 출력된 내용을 보면 컨트롤러 객체가 자신이 관리하는 리소스를 어떤 식으로 설정하는지 조금이나마 엿볼 수 있다
+-> 디플로이먼트는 템플릿을 적용해서 파드를 생성하는데, 이 템플릿 일부는 메타데이터 필드로 레이블을 포함한다
+-> 여기에서는 디플로이먼트가 app이라는 레이블에 hello-kiamol-2라는 값을 달아 파드에 부여했다
+-> 이 레이블이 일치하는 파드를 검색했더니 디플로이먼트가 관리하는 파드를 찾았다 
+
+-레이블을 이용하여 리소스 간 관계를 파악하는 것은 쿠버네티스에서 매우 자주 쓰는 중요한 패턴이다
+-> 별도의 다이어그램과 함께 설명하겠으니 확실히 이해해 두기 바란다.
+-> 리소스는 생애 주기를 거치며 생성이나 수정, 삭제와 함께 레이블을 부여 받는다
+-> 또한, 컨트롤러 객체는 레이블 셀렉터를 통해 자신이 관리하는 리소스인지 판단한다
+-> 이 과정은 그림 2-9에서 보듯이, 리소스가 가진 특정한 레이블이 일치하는지 확인하는 과정이다. 
+
+
+
