--- a/보이저엑스/6-1. SPDY 프로토콜.md
+++ b/보이저엑스/6-1. SPDY 프로토콜.md
@@ -1,4 +1,48 @@
 ```
+https://d2.naver.com/helloworld/140351
+최근 Google의 SPDY 프로토콜을 Facebook에서도 지지하여 Facebook도 SPDY 구현을 시작했다는 기사가 발표됐습니다.
+웹 속도를 빠르게 하기 위해 다양한 방법을 고안하고 제시하는 Google의 노력중에서, 새로운 산업 표준을 만들 정도로
+가장 빛을 보고 있는 것이 바로 SPDY가 아닐까 싶은데요. SPDY는 HTTP 2.0에 포함될 예정입니다
 
+SPDY는 'speedy'라는 단어를 기반으로 Google이 만든 조어로, Google이 자신들의 'Make the Web Faster' 노력의
+하나로 제안한 새로운 프로토콜입니다. 이는 초창기 인터넷 환경에서 고안된 HTTP의 단점들을 보완하여,
+지금과 앞으로의 인터넷 환경을 보다 효율적으로 이용할 수 있는 프로토콜로 제안된 것입니다.
+
+이 글에서는 SPDY의 기능과 장점을 간단히 소개하고, SPDY 지원 현황을 살펴 본 후, SPDY 도입 시의 고려 사항에 대해
+살펴보도록 하겠습니다.
+
+1) 너무 오래 버전 업이 없었던 HTTP
+- HTTP는 1991년에 0.9버전이 처음 발표되었고, 1996년에 1.0 버전, 1999년에 1.1 버전이 나온 뒤로 10년이 넘는 시간 동안
+전혀 변화가 없었다. 그러나 오늘 날의 웹 페이지는 1990년대의 웹 페이지에 비하여 그 규모와 페이지당 HTTP 요청 개수가 20배 가량
+증가했다.
+-> 표 1은 Google I/O 2012에서 Google이 발표한 자료에서 발췌한 것이다.
+
+- 1996년도의 Yahoo 메인 페이지 용량은 34KB 정도였다
+-> 이는 2012년 평균 웹 페이지 용량의 30분의1 수준이다.
+
+- 1990년대와의 비교는 물론이고, 근자인 2010년과 2012년을 비교해도 상당한 차이가 있다
+-> 초고속 인터넷 보급과 함께 점점 더 미려한 사용자 UX 덕분에 페이지 크기와 요청 개수의 평균 값이 증가하고 있는 것이다.
+
+- 이와 같이 과거에 비해 달라진 오늘날의 웹 페이지의 특징을 정리하면 다음과 같다
+1) 훨씬 더 많은 리소스로 구성되어 있다
+2) 다수의 도메인을 사용한다
+3) 과거에 비해 매우 동적으로 동작한다
+4) 보안이 보다 중요한 이슈가 되었다
+
+- 예전과 달라진 오늘 날의 웹 환경을 고려하여 Google에서는 HTTP를 보완한 SPDY 프로토콜을 발표하게 된 것이다.
+-> 이 SPDY 프로토콜은 특히 전송 지연(latency) 문제의 해결에 주로 집중하고 있다
+
+2) SPDY 특징
+- 전통적인 TCP/IP 계층 모델과 비교하여 SPDY의 계층을 표현하면 그림 1과 같다
+![image](https://github.com/LeeJaeYun7/Backendinterviewquestions/assets/134198681/a0560809-7811-4b57-93e5-afc147c1167d)
+
+-SPDY의 특징을 간단히 살펴보자
+(1) 항상 TLS 위에서 동작
+-> 따라서 HTTPS로 작성된 웹 사이트만 적용 가능하다
+-> TLS는 SSL의 다음 버전이다. 같은 포로토콜의 예전 버전 이름과 현재 버전 이름이므로 종종 혼동되어 사용되며,
+   이 기사에서도 TLS와 SSL을 구별해서 사용하지는 않는다
+
+(2) HTTP 헤더 압축
+- HTTP 헤더에는 요청마다 
 
 ```
