Update 2-1. 키 유도 함수.md

--- a/보이저엑스/2-1. 키 유도 함수.md
+++ b/보이저엑스/2-1. 키 유도 함수.md
@@ -2,8 +2,11 @@
 
 
 ```
+https://ko.wikipedia.org/wiki/%ED%82%A4_%EC%9C%A0%EB%8F%84_%ED%95%A8%EC%88%98
 
-
-
+키 유도 함수는 암호학에서 의사 난수 함수를 사용하여 키를 더 긴 길이의 키로 확장하거나
+디피-헬먼 키 교환의 결과인 그룹 요소를 AES와 함께 사용할 대칭 키로 변환하는 등
+필요한 형식의 키를 얻는 데 사용할 수 있다.
+키 암호화 해시 함수는 키 유도에 사용되는 의사 난수 함수의 대중적인 예이다. 
 
 ```
