--- a/보이저엑스/10. CRDT란?.md
+++ b/보이저엑스/10. CRDT란?.md
@@ -81,4 +81,37 @@ CRT와 OT란 동시편집 기술로, 실시간 협업 툴에 관련된 기술입
 (5) CRDT의 작동 원리
 -CRDT의 정의는 '어떤 변경사항을 받으면, 순서와 상관없이 변경사항만 같으면 같은 상태'입니다.
 -> OT는 순서가 중요하고, CRDT는 순서가 상관 없고, operation만 같으면 어긋나더라도 같은 상태가 됩니다.   
-   
+   예를 들어 설명 드리겠습니다.
+
+- 아까 OT는 인덱스로 한다고 했는데, 인덱스는 변하게 됩니다.
+-> CRDT는 이 문제를 피하기 위해 각 개체를 유니크한 값으로 봅니다.
+-> 따라서 텍스트가 추가될 때 새로운 유니크값을 생성해서 넣어줍니다.
+
+- 예를 들어, 유니크한 값을 0과 1 사이의 숫자들로 한다고 치면
+  동일하게 L과 !를 넣는 상태에서
+  L은 0.6과 0.8 사이에 0.7을 생성하고,
+  !는 0.8과 1 사이에 0.9를 생성하여 L과 !가 0.6, 0.8 사이에 각각 0.7, 0.9로 들어가게 됩니다
+
+- 동시 편집을 하더라도 합치는 과정에서 유니크한 값으로 판별하기 때문에 충돌이 일어나지 않게 됩니다.
+  CRDT는 이러한 기술을 서버응답을 기다릴 필요 없이 할 수 있는 것입니다.
+  통신은 서버에서 하거나 클라에서 직접 병합하거나 같은 결과를 만들기 때문에
+  네트워크의 영향을 직접적으로 받지 않을 수 있습니다.
+
+(6) CRDT 방식의 문제점
+- 하지만 CRDT에서도 완벽하지 않은 동작이 있습니다. 이것이 바로 예시입니다.
+  두 글자를 merge 했을 때 이상하게 짬뽕된 단어가 생기게 됩니다.
+-> 앞에서 말했듯이 글자 하나에 모두 유니크한 (숫자)값을 가진다고 했을 때,
+   독립적으로 글자들이 랜덤화된 값에 의해 merge 됩니다.
+-> 불행하게도 alice와 charlie의 글자들을 정렬했을 때 이상한 글자로 나옵니다.
+
+(7) CRDT의 문제를 보완하는 알고리즘 기법들
+-> 이러한 문제점을 해결하는 다양한 알고리즘 기법들이 있습니다.
+
+(8) CRDT 더 알아보기
+- 추가적으로, 디자인 프로그램 'Figma'에서 실제 CRDT를 적용한 개발 블로그가 있는데
+  좋은 내용이기에 추천드립니다.
+-> yorkie에서도 CRDT를 활용한 응용 프로그램 데모를 확인하실 수 있습니다.
+-> 채널톡의 CRM 마케팅 기능을 활용하면 다양한 고객정보를 수집 및 저장할 수 있습니다.
+-> CRDT와 비슷한 방식으로 인덱스 1과 2 사이로 옮기면 1.5로 추가되는 형식으로 프로필 키를 정렬하는
+   방식을 설계했습니다. 
+
