--- a/넥슨/5. 해시 충돌 처리 방식.md
+++ b/넥슨/5. 해시 충돌 처리 방식.md
@@ -1,5 +1,70 @@
+
+
 ```
 
+1) 개방 주소화 방법
+- 개방 주소화 방법에서는 모든 원소가 해시 테이블 그 자체에 저장된다
+-> 즉, 테이블의 각 저장 위치는 동적 집합의 원소나 NIL을 포함한다.
+-> 원소를 검색할 때 찾고자 하는 원소를 발견하거나, 그 원소가 테이블에 존재하지 않는다는 것이 명확할 때까지 체계적인 조사가 이루어진다.
+-> 체이닝과 달리 테이블 외부에 저장된 리스트나 원소는 없다.
+-> 그러므로 개방 주소화 방법에서는 해시 테이블이 "꽉 차서" 더 이상 삽입이 가능하지 않을 수도 있다.
+-> 그러므로 적재율은 절대 1을 넘을 수 없다.
+
+- 물론 해시 테이블 내부에 사용되지 않은 공간을 이용해서 체이닝을 위한 연결 리스트를 저장할 수 있다.
+-> 그러나 개방 주소화 방법의 장점은 포인터를 전혀 사용하지 않는다는 것이다.
+-> 포인터를 따라가는 대신 조사될 위치의 순서를 계산한다.
+-> 포인터를 저장하지 않음으로써 얻어진 추가 메모리는 해시 테이블의 저장 공간 확장에 이용된다.
+-> 이것은 결과적으로 충돌을 줄이고, 빠른 접근을 가능하게 한다.
+
+- 개방 주소화 방법에서 삽입을 수행하기 위해서는 키를 저장할 빈 공간을 찾을 때까지
+  해시 테이블을 연속해서 조사해야 한다
+-> 조사 순서는 고정된 순서 0, 1,... m-1을 사용하는 대신 삽입된 키에 기반하여 결정된다
+-> 조사해야 할 위치를 결정하기 위해 두 번째 입력 인자로 조사 번호를 포함하는 해시 함수로 확장한다.
+-> 그러므로 해시 함수는 다음과 같은 형식을 가진다.
+
+- 개방 주소화 방법에서 모든 키 k에 대해 다음은 <0, 1, ... m-1>의 순열이 되는 것이 이상적이다.
+
+
+2) 체이닝에 의한 충돌 해결
+- 체이닝에서는 그림 11.3과 같이 같은 위치에 해시되는 모든 원소를 같은 연결 리스트에 넣는다.
+-> 위치 j는 위치 j에 해시된 모든 원소로 이루어진 리스트의 처음을 가리키는 포인터를 가지고 있다.
+-> 이런 원소가 존재하지 않는다면 위치 j는 NIL 값을 가진다.
+
+- 체이닝에 의해 충돌이 해결될 때, 해시 테이블 T의 사전적 작업을 구현하기가 매우 쉽다.
+- 삽입 프로시저는 최악의 경우 수행시간이 O(1)이다.
+-> 삽입될 원소 x가 테이블에 미리 존재하지 않는다고 가정하기 때문에, 삽입 프로시저는 매우 빠르다.
+-> 필요하다면 삽입 전에 키가 x.key인 원소를 찾음으로써 이 가정을 확인할 수 있다.
+
+- 검색 프로시저는 최악의 경우 수행 시간이 리스트 길이에 비례한다
+-> 이 프로시저에 대한 좀 더 상세한 분석은 아래에서 제공한다.
+-> 그림 11.3과 같이 리스트가 양방향 연결이 되어 있다면 원소를 O(1)에 삭제할 수 있다.
+-> 그러므로 먼저 x를 검색할 필요가 없다
+-> 해시 테이블이 삭제를 지원한다면 항목을 빠르게 삭제할 수 있도록 연결 리스트가 양방향이어야 한다.
+-> 리스트가 단방향으로 연결되어 있으면, 원소 x를 삭제하기 위해 x의 바로 전 원소의 next 속성을 갱신할 수 있도록,
+   리스트 T[h(x.key)]에 있는 x를 우선적으로 찾아야 할 것이다.
+-> 단방향 연결 리스트를 사용하면 삭제와 검색 모두 동일한 점근적 수행시간을 가진다.
+
+
+2-1) 체이닝을 사용하는 해싱의 분석
+- 체이닝을 사용하는 해싱은 얼마나 잘 동작하는가?
+-> 그리고 주어진 키를 가지는 원소를 검색하는데 실제로 얼마나 걸리는가?
+
+- m개의 저장 공간을 가지고 있고, n개가 저장된 해시 테이블 T에서 T의 적재율(load factor) a를 n/m으로 정의하자
+-> 즉, 적재율은 각 리스트에 저장된 원소의 평균 개수다.
+-> a는 1보다 작을 수도, 같을 수도, 클 수도 있는데 분석은 이 a에 대해 이루어질 것이다.
+
+- 체이닝을 이용하는 해싱의 최악의 경우 수행시간은 굉장히 크다.
+-> n개의 키가 모두 같은 위치에 해시되는 경우 길이가 n인 리스트가 만들어지게 된다
+-> 그러므로 최악의 경우 검색 수행시간은 해시값을 계산하는 시간에 O(n)이 추가된다.
+-> 이는 모든 원소에 대해 하나의 연결 리스트를 사용하는 경우보다 좋지 않다.
+-> 물론 이런 최악의 경우 수행시간을 각오하고 해시 테이블을 사용하지는 않는다.
+
+- 해싱의 평균 성능은 해시 함수 h가 저장될 키들의 집합을 m개의 위치에 평균적으로 얼마나 잘 분산시키느냐에 달려 있다.
+-> 11.3절에서 이 문제를 다룰 것이다.
+-> 하지만 지금은 임의의 원소가 기존에 해시된 다른 원소의 위치에 상관없이 m개의 위치에 골고루 해시된다고 가정한다.
+-> 이 가정을 단순 균등 해싱이라고 한다.
+
+ 
 
 
 ```
