Update 10. SOLID 패턴이란 무엇인가?.md

--- a/넥슨/10. SOLID 패턴이란 무엇인가?.md
+++ b/넥슨/10. SOLID 패턴이란 무엇인가?.md
@@ -2,6 +2,16 @@
 
 ```
 
+1)SRP
+- 어떤 클래스를 변경해야 하는 이유는 오직 하나 뿐이어야 한다
+그림 5-1과 같이 남자라고 하는 클래스와 남자 클래스에 의존하는 다양한 클래스가 있다고 하자.
+딱 봐도 남자는 참 피곤할것 같다. 이러한 피곤함은 역할과 책임이 너무 많기 때문이다. 객체지향의 세계에서는 이런 경우 나쁜 냄새가 난다고 한다. 예를 들어, 어느 날 여자친구와 헤어졌다고 해보자.
+남자는 더 이상 챙길 일 없는 기념일과 대상이 없는 키스하기에 힘들어하게 된다. 거기에 더해 여자 친구 없는 스트레스를 온 세상에 뿌리고 다니니 어머니, 직장 상사, 소대장님까지 피곤한 지경에 이르게 되고야 만다.
+
+따라서 이런 경우에 역할(책임)을 분리하라는것이 단일 책임 원칙이다. 그림 5-1의 클래스 설계를 그림 5-2처럼 바꿔보자.
+
+남자라는 하나의 클래스가 역할과 책임에 따라 네 개의 클래스로 쪼개진 것을 볼 수 있다. 그리고 역할과 클래스명도 딱 떨어지니 이해하기도 좋다. 이제 여자 친구와 이별하더라도 남자 친구만 상처를 입으면 된다. 어머니-아들 관계, 직장 상사-사원 관계, 소대장-소대원 관계는 여자 친구와 이별한 남자친구로부터 어떠한 영향도 받지 않는 아름다운 세상이 온 것이다. 어떤가? 아까 하나의 클래스에 다수의 역할과 책임이 몰려 있을때는 냄새가 나더니, 클래스를 역할과 책임에 따라 분리해서 각각 하나의 역할과 책임만 갖게 하니 향기가 나게 되지 않는가? 여기서는 클래스의 분할에 대해서만 이야기했지만, 단일 책임 원칙은 속성, 메서드, 패키지, 모듈, 컴포넌트, 프레임워크 등에도 적용할 수 있는 개념이다.
+
 
 
 ```
