--- a/넥슨/2.JPA 생명주기란?.md
+++ b/넥슨/2.JPA 생명주기란?.md
@@ -2,5 +2,55 @@
 
 ```
 
+1) 영속성 컨텍스트란?
+- JPA를 이해하는 데 가장 중요한 용어는 영속성 컨텍스트다.
+-> 우리말로 번역하기가 어렵지만 해석하자면 '엔티티를 영구 저장하는 환경'이라는 뜻이다.
+-> 엔티티 매니저로 엔티티를 저장하거나 조회하면 엔티티 매니저는 영속성 컨텍스트에 엔티티를 보관하고 관리한다.
+
+em.persist(member);
+
+- 지금까지는 이 코드를 단순히 회원 엔티티를 저장한다고 표현했다.
+-> 정확히 이야기하면 persist() 메소드는 엔티티 매니저를 사용해서 회원 엔티티를 영속성 컨텍스트에 저장한다.
+
+- 지금까지 영속성 컨텍스트를 직접 본 적은 없을 것이다.
+-> 이것은 논리적인 개념에 가깝고 눈에 보이지도 않는다.
+-> 영속성 컨텍스트는 엔티티 매니저를 생성할 때 하나 만들어진다.
+-> 그리고 엔티티 매니저를 통해서 영속성 컨텍스트에 접근할 수 있고, 영속성 컨텍스트를 관리할 수 있다.
+
+
+2) 엔티티의 생명주기
+- 엔티티에는 4가지 상태가 존재한다.
+
+(1) 비영속: 영속성 컨텍스트와 전혀 관계가 없는 상태
+(2) 영속: 영속성 컨텍스트에 저장된 상태
+(3) 준영속: 영속성 컨텍스트에 저장되었다가 분리된 상태
+(4) 삭제: 삭제된 상태
+
+(1) 비영속
+- 엔티티 객체를 생성했다. 지금은 순수한 객체 상태이며 아직 저장하지 않았다.
+  따라서 영속성 컨텍스트나 데이터베이스와는 전혀 관련이 없다.
+-> 이것을 비영속 상태라 한다. 그림 3.3을 참고하자.
+
+(2) 영속
+- 엔티티 매니저를 통해서 엔티티를 영속성 컨텍스트에 저장했다.
+-> 이렇게 영속성 컨텍스트가 관리하는 엔티티를 영속 상태라 한다.
+-> 이제 회원 엔티티는 비영속 상태에서 영속 상태가 되었다.
+-> 결국 영속 상태라는 것은 영속성 컨텍스트에 의해 관리된다는 뜻이다.
+-> 그림 3.4를 참고하자.
+-> 그리고 em.find()나 JPQL을 사용해서 조회한 엔티티도 영속성 컨텍스트가 관리하는 영속 상태다.
+
+(3) 준영속
+- 영속성 컨텍스트가 관리하던 영속 상태의 엔티티를 영속성 컨텍스트가 관리하지 않으면 준영속 상태가 된다.
+-> 특정 엔티티를 준영속 상태로 만들려면 em.detach()를 호출하면 된다.
+-> em.close()를 호출해서 영속성 컨텍스트를 닫거나 em.clear()를 호출해서 영속성 컨텍스트를 초기화해도
+   영속성 컨텍스트가 관리하던 영속 상태의 엔티티는 준영속 상태가 된다.
+
+(4) 삭제
+- 엔티티를 영속성 컨텍스트와 데이터베이스에서 삭제한다.
+
+
+3) 영속성 컨텍스트의 특징
+- 
+
 
 ```
