--- a/채널코퍼레이션/Java/2.동시성 제어.md
+++ b/채널코퍼레이션/Java/2.동시성 제어.md
@@ -26,7 +26,7 @@
 
 - 맞는 설명이지만, 동기화에는 중요한 기능이 하나 더 있다.
 -> 똥기화 없이는 한 스레드가 만든 변화를 다른 스레드에서 확인하지 못할 수 있다.
--> 동기화는 일관성이 깨진 상태를 볼 수 없게 하는 것ㅇ느 물론, 동기화된 메서드나 블록에 들어간 스레드가 같은 락의 보호하에 수행된
+-> 동기화는 일관성이 깨진 상태를 볼 수 없게 하는 것은 물론, 동기화된 메서드나 블록에 들어간 스레드가 같은 락의 보호하에 수행된
    모든 이전 수정의 최종 결과를 보게 해준다.
 
 - 언어 명세상 long과 double 외의 변수를 읽고 쓰는 동작은 원자적(atomic)이다.
