--- a/넥슨/프로젝트/프로젝트 질문.md
+++ b/넥슨/프로젝트/프로젝트 질문.md
@@ -3,4 +3,56 @@
 ```
 
 
+1. 어떤 디자인 패턴을 적용하셨나요?
+- 전략 패턴을 적용했습니다
+
+1-1. 전략 패턴을 왜 적용하셨나요?
+- 
+
+
+2. 클린 코드를 왜 적용하셨나요?
+
+
+2-1. 클린 코드를 어떻게 적용하셨나요?
+
+
+3. API 성능 튜닝을 왜 하셨나요?
+- 프로덕트를 테스트하던 중 배포한 API의 성능이 낮은 것이 판단되어서 성능 튜닝을 진행했습니다
+
+3-1. API 성능 튜닝을 어떻게 접근하셨나요?
+-
+
+3-2. 실행 계획 분석에 기반했다는 것이 무엇인가요? 왜 그렇게 접근하였나요?
+
+
+3-3. 실행 계획 분석을 할 때 유의할 점이 무엇인가요? 
+
+4. Github Action CI/CD 적용은 왜 하셨나요?
+
+
+4-1. 왜 Gradle Cache를 적용하셨나요? Gradle Cache를 적용한다는 것이 무엇인가요?
+
+4-2. Github Action CI/CD의 실제 동작 프로세스는 어떻게 되나요? 
+
+5. 왜 Gitlab으로 GitOps를 구축하셨나요? GitOps란 무엇인가요?
+
+5-1. 왜 k8s pod로 Gitlab을 만들어야 하나요? 그냥 Github private repo에서 관리해도 안전한 것이 아닌가요?
+
+5-2. Redis와 Postgresql이 왜 필요했나요? 왜 이중화가 필요했나요? 왜 Node Affinity 설정이 필요했나요?
+
+5-3. 실제로 구축 작업을 할 때 가장 어려웠던 점이 무엇인가요?
+
+
+6. Redis를 왜 캐시로서 활용했나요? 왜 Broker Id를 캐시로 활용해야 하나요?
+
+
+6-1. Redis 캐시의 동작 원리는 무엇인가요? 어떻게 동작하나요? 왜 Redis를 캐시로 활용하는 것이 효과적인가요?
+
+
+7. 왜 Redis를 메시지 브로커로서 활용했나요? 다른 메시지 브로커로 선택할 수 있는 대안은 없었나요? 왜 Redis가 최선인가요?
+
+7-1. 왜 Pub/Sub을 통한 서버 간 데이터 전송이 필요했나요? Pub/Sub이 아닌 다른 방법은 없었을까요?
+
+
+
 ```
