Update 2. Github Action CI&CD 동작 원리.md

--- a/넥슨/프로젝트/2. Github Action CI&CD 동작 원리.md
+++ b/넥슨/프로젝트/2. Github Action CI&CD 동작 원리.md
@@ -3,6 +3,84 @@
 
 ```
 
+https://docs.github.com/ko/actions/using-workflows/about-workflows
+
+1) 워크플로 정보
+- 트리거, 구문, 고급 기능을 포함하여 Github Actions 워크플로의 개략적인 개요를 가져옵니다.
+
+(1) 워크플로 정보
+- 워크플로는 하나 이상의 작업을 실행하는 구성 가능한 자동화된 프로세스입니다.
+-> 워크플로는 리포지토리에 체크 안된 YAML 파일에서 정의되며, 리포지토리의 이벤트로 트리거될 때,
+   실행되거나 수동으로 또는 정의된 일정에 따라 트리거될 수 있습니다.
+
+- 워크플로는 리포지토리의 .github/workflows 디렉터리에 정의되며, 리포지토리에는 여러 워크플로가
+  있을 수 있으며, 각 워크플로는 다른 작업 세트를 수행할 수 있습니다.
+-> 예를 들어, 끌어오기 요청을 빌드 및 테스트하는 워크플로, 릴리스가 생성될 때마다 애플리케이션을 배포하는 워크플로,
+   누군가가 새 이슈를 열 때마다 레이블을 추가하는 워크플로가 있을 수 있습니다.
+
+
+2) 워크플로 기본 사항
+- 워크플로에는 다음과 같은 기본 구성 요소가 포함되어야 합니다.
+
+(1) 워크플로를 트리거하는 하나 이상의 이벤트
+(2) 하나 이상의 _작업_ 이며, 각 작업은 실행기 머신에서 실행되고 일련의 하나 이상의 _단계_를 실행합니다.
+(3) 각 단계에서는 워크플로를 간소화할 수 있는 재사용 가능한 확장인 작업을 정의하거나 실행하는 스크립트를 실행할 수 있습니다.
+
+- 이러한 기본 구성 요소를 사용하는 방법에 관한 자세한 내용은 Github Actions 이해를 참조하세요.
+
+
+3) 워크플로 트리거
+- 워크플로 트리거는 워크플로를 실행하게 하는 이벤트입니다. 해당 이벤트는 다음과 같습니다.
+(1) 워크플로의 리포지토리에서 발생하는 이벤트
+(2) Github 외부에서 발생하고 Github에서 repository_dispatch 이벤트를 트리거하는 이벤트
+(3) 예약된 시간
+(4) 수동
+
+예를 들어, 리포지토리의 기본 분기로 푸시되거나, 릴리스가 생성되거나, 이슈가 열리면 실행되도록
+워크플로를 구성할 수 있습니다.
+
+자세한 내용은 "워크플로 트리거"을 참조하고, 이벤트의 전체 목록은 "워크플로를 트리거하는 이벤트"을 참조하세요.
+
+4) 워크플로 구문
+- 워크플로는 YAML을 사용하여 정의됩니다. 워크플로 작성에 대한 YAML 구문의 전체 참조는
+  "Github Actions에 대한 워크플로 구문"을 참조하세요
+
+5) 예제 워크로드 만들기
+- Github Actions는 YAML 구문을 사용하여 워크플로를 정의합니다.
+  각 워크플로는 코드 리포지토리의 .github/workflows 디렉터리에 별도의 YAML 파일로 저장됩니다.
+
+- 리포지토리에서 코드가 푸시될 때마다 일련의 명령을 자동으로 트리거하는 예제 워크플로를 만들 수 있습니다.
+-> 이 워크플로에서 Github Actions는 푸시된 코드를 체크 아웃하고 bats 테스트 프레임워크를 설치하고,
+   기본 명령 bats -v를 실행하여 bats 버전을 출력합니다.
+
+(1) 리포지토리에서 워크플로 파일을 저장할 .github/workflows/ 디렉터리를 만듭니다.
+(2) .github/workflows/ 디렉터리에서 learn-github-actions.yml이라는 새 파일을 만들고 다음 코드를 추가합니다.
+
+name: learn-github-actions
+run-name: ${{ github.actor }} is learning GitHub Actions
+on: [push]
+jobs:
+  check-bats-version:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - run: npm install -g bats
+      - run: bats -v
+
+(3) 변경 내용을 커밋하고 Github 리포지토리에 푸시합니다.
+
+- 이제 새 Github Actions 워크플로 파일이 리포지토리에 설치되고, 누군가가 리포지토리 내용을 푸시할 때마다
+  자동으로 실행됩니다.
+-> 워크플로의 실행 기록에 관한 세부 정보를 보려면 "워크플로 실행에 대한 작업 보기"를 참조하세요
+
+(4) 워크플로 파일 이해
+- YAML 구문을 사용하여 워크플로 파일을 만드는 방법의 이해를 돕기 위해 이 섹션에서는 소개 예제의 각 줄에 대해 설명합니다.
+
+
+
 
 
 
