--- a/넥슨/프로젝트/프로젝트 질문.md
+++ b/넥슨/프로젝트/프로젝트 질문.md
@@ -54,5 +54,8 @@
 7-1. 왜 Pub/Sub을 통한 서버 간 데이터 전송이 필요했나요? Pub/Sub이 아닌 다른 방법은 없었을까요?
 
 
+8. 프로젝트에 트랜잭션을 적용해보셨나요?
+
+8-1. 왜 트랜잭션을 적용하셨나요? 자바의 @Transactional을 사용할 때 주의점은 무엇인가요? 
 
 ```
