Update 7. 기본 그래프 알고리즘.md

--- a/보이저엑스/자료구조/7. 기본 그래프 알고리즘.md
+++ b/보이저엑스/자료구조/7. 기본 그래프 알고리즘.md
@@ -3,6 +3,49 @@
 
 ```
 
+그래프 문제는 컴퓨터 과학에서 많이 사용되고, 그래프를 조작하는 알고리즘은 이 분야에서 중요하다.
+-> 또한, 수많은 흥미로운 문제가 그래프를 이용해 표현할 수 있다
+-> 여기서는 좀 더 중요한 것들 중 일부를 살펴볼 것이다.
+
+- 22장에서는 컴퓨터에서 그래프를 표현하는 방법을 다루고, 너비 우선 검색이나 깊이 우선 검색을 이용해
+  그래프를 검색하는 알고리즘을 설명한다.
+-> 또한 깊이 우선 검색의 응용으로 두 가지를 제공하는데, 하나는 비순환 방향 그래프의 위상 정렬이고
+   다른 하나는 방향 그래프를 강한 결합 요소로 분해하는 것이다.
+
+- 23장에서는 그래프 하나의 최소 가중치 신장 트리를 찾는 방법을 설명한다.
+-> 이는 각 간선에 가중치가 주어졌을 때, 가중치가 가장 작게 모든 노드를 연결하는 방법이다
+-> 최소 신장 트리를 알아내는 알고리즘은 그리디 알고리즘의 좋은 예다.
+
+- 24장과 25장에서는 각 간선이 관련된 길이 또는 "가중치"를 가지고 있을 때,
+  정점 간의 최단 경로를 계산하는 문제를 다룬다.
+-> 24장에서는 주어진 출발 정점에서 다른 모든 노드로의 최단 경로를 계싼하는 것을 보이고,
+   25장에서는 정점의 모든 쌍에 대해 최단 경로를 구하는 방법을 학습한다.
+
+- 마지막으로 26장에서는 지정된 출발 정점과 지정된 도착 정점 그리고 각 방향 간선을 따라서
+  흘러갈 수 있는 지정된 물질의 양을 가진 방향 그래프인 플로우 네트워크에서
+  물질의 최대 플로우를 계산하는 방법을 보인다.
+-> 이 일반적인 문제는 여러 형태로 발생하며, 최대 플로우를 계산하기 위한 좋은 알고리즘은
+   관련된 여러 문제를 효율적으로 해결하는 것을 도와줄 수 있다.
+-> 주어진 그래프 G=(V,E)에 대해 수행되는 알고리즘의 수행시간을 표현할 때는 입력의 크기를 정점의 개수인 |V|와
+   간선들의 개수인 |E|를 이용해 표현한다.
+-> 즉, 입력의 크길르 하나가 아니라 두 가지의 관련 매개변수로 표현한다.
+-> 이 두 가지의 매개변수를 표현하는 방법은 일반적인 관계를 따른다.
+
+- 이 장에서는 그래프를 표현하는 방법과 그래프를 검색하는 방법을 제시한다.
+-> 그래프를 검색한다는 것은 그래프의 모든 정점을 방문하기 위해 해당 그래프의 간선을 조직적으로 따라가는 것을 의미한다.
+-> 그래프 검색 알고리즘은 그래프의 구조에 대해 많이 알아낼 수 있다
+-> 많은 알고리즘이 입력으로 주어지는 그래프를 검색하여 이런 구조적인 정보를 얻어낸다.
+-> 일부 다른 그래프 알고리즘은 기본 그래프 검색 알고리즘을 변형하기도 한다.
+-> 그래프 검색을 위한 기술은 그래프 알고리즘 분야의 핵심이다.
+
+- 22.1절에서는 컴퓨터에서 그래프를 표현하는 가장 일반적인 두 가지 방법인 인접 리스트와 인접 행렬을 설명한다.
+-> 22.2절에서는 너비 우선 검색이라는 간단한 그래프 검색 알고리즘을 소개하고, 너비 우선 트리를 생성하는 방법을 보인다.
+-> 22.3절에서는 깊이 우선 검색을 소개하고 깊이 우선 검색이 정점을 방문하는 순서에 대한
+   표준적인 결과 몇 개를 증명한다.
+-> 22.4절에서는 깊이 우선 검색에 대한 첫 번째의 실제 응용으로 방향 비순환 그래프의 위상 정렬에 대한 내용을 다룬다.
+-> 그리고 깊이 우선 검색의 두 번째 응용으로 방향 그래프의 강한 결합 요소를 찾는 알고리즘은 22.5절에서 살펴본다.  
+
+
 
 
 ```
