Update 5. MySQL과 MongoDB의 차이점은?.md

--- a/보이저엑스/5. MySQL과 MongoDB의 차이점은?.md
+++ b/보이저엑스/5. MySQL과 MongoDB의 차이점은?.md
@@ -3,6 +3,44 @@
 
 ```
 
+https://aws.amazon.com/ko/compare/the-difference-between-mongodb-vs-mysql/
+
+1) 데이터 모델
+- MySQL은 데이터를 열, 행 및 테이블에 저장하는 관계형 데이터베이스 시스템입니다.
+-> 데이터를 행에 저장하며 각 열은 서로 다른 유형의 데이터를 나타냅니다.
+-> 그런 다음 외래 키와 프라이머리 키를 사용하여 데이터 간의 관계를 정의합니다.
+-> 각 테이블에는 테이블을 식별하는 데 사용하는 프라이머리 키가 있으며,
+   외래 키는 관계를 생성합니다.
+
+- MongoDB는 모든 데이터를 BSON(Binary JSON) 문서로 저장하는 문서 지향 데이터베이스입니다.
+-> BSON을 사용하면 다양한 형식의 데이터를 직렬화할 수 있습니다.
+-> BSON 문서를 사용하면 비정형, 반정형, 정형 데이터를 저장할 수 있습니다.
+-> MongoDB는 데이터베이스 스키마 대신 문서를 컬렉션에 저장하는 유연한 접근 방식을 사용합니다.
+
+2) 확장성
+- MySQL 데이터베이스 시스템에서는 확장에 사용할 수 있는 옵션이 제한되어 있습니다.
+-> 다음 옵션 중에서 선택할 수 있습니다.
+
+(1) 현재 데이터베이스 서버에 더 많은 리소스를 추가하여 수직적으로 확장
+(2) 다른 서버에 데이터베이스의 읽기 전용 복사본을 생성하여 읽기 복제
+
+- 읽기 복제는 최대 5개의 복사본으로 제한됩니다.
+-> 복제본은 또한 기본 복제본보다 뒤쳐질 수 있으며,
+   이로 인해 대규모 성능 문제가 발생할 수 있습니다.
+-> 수직 확장성 또한 사용하는 인프라로 제한됩니다.
+
+- 반대로 MongODB 설계는 확장성 측면에서 상당한 이점을 제공합니다.
+-> 다음과 같이 스케일링을 위한 두 가지 주요 기능이 있습니다.
+(1) 복제본 세트 - 동일 한 데이터를 보유하는 MongoDB 서버 그룹
+(2) 샤딩 - 여러 서버에 분산된 데이터의 여러 부분
+
+- MongoDB를 사용하면 샤딩된 클러스터를 만들 수 있으므로,
+  데이터의 일부가 여러 서버에 복제됩니다.
+-> 예를 들어, 고객 레코드가 많은 경우 A~J의 이름과 K~Z의 이름이
+   자체 복제 세트에 포함되도록 고객 레코드를 분산할 수 있습니다.
+-> 따라서 MongoDB는 수평적으로 확장하여 읽기 및 쓰기 성능을 대규모로
+   최적화할 수 있습니다.
+
 
 
 
